--- a/internet.bib
+++ b/internet.bib
@@ -1,16 +1,21 @@
-@Manual{knuth93:computer,
-  title =        {Computer Literacy Bookshop Interview},
-  author =    {Donald Knuth},
-  month =     {December},
-  year =      1993,
-  url =     {http://tex.loria.fr/historique/interviews/knuth-clb1993.html}
+
+@Manual{	  knuth93:computer,
+  title		= {Computer Literacy Bookshop Interview},
+  author	= {Donald Knuth},
+  month		= {December},
+  year		= 1993,
+  url		= {http://tex.loria.fr/historique/interviews/knuth-clb1993.html}
+		  ,
+  keywords	= {internet}
 }
 
-@article{neumann82:first,
-  title={{First Draft of a Report on the EDVAC}},
-  author={von Neumann, J.},
-  journal={The origins of digital computers: selected papers},
-  pages={383--392},
-  url={http://www.zmms.tu-berlin.de/~modys/MRT1/2003-08-TheFirstDraft.pdf},
-  year=1982
+@Article{	  neumann82:first,
+  title		= {{First Draft of a Report on the EDVAC}},
+  author	= {von Neumann, J.},
+  journal	= {The origins of digital computers: selected papers},
+  pages		= {383--392},
+  url		= {http://www.zmms.tu-berlin.de/~modys/MRT1/2003-08-TheFirstDraft.pdf}
+		  ,
+  year		= 1982,
+  keywords	= {internet}
 }
