--- a/licenses.bib
+++ b/licenses.bib
@@ -1,8 +1,9 @@
 
-@Misc{            foundation07:gnu,
-  author        = {Free Software Foundation},
-  title         = {{GNU} General Public License},
-  howpublished  = {Avalilable at \url{www.gnu.org/licenses/gpl-3.0.txt}},
-  month         = {Jun},
-  year          = 2007
+@Misc{		  foundation07:gnu,
+  author	= {Free Software Foundation},
+  title		= {{GNU} General Public License},
+  howpublished	= {Avalilable at \url{www.gnu.org/licenses/gpl-3.0.txt}},
+  month		= {Jun},
+  year		= 2007,
+  keywords	= {licenses}
 }
