--- a/music-dictionary.bib
+++ b/music-dictionary.bib
@@ -1,77 +1,85 @@
 
-@Book{            griffiths95:enciclopedia,
-  title         = {Enciclopédia da Música do Século XX},
-  publisher     = {Martins Fontes},
-  year          = {1995},
-  author        = {Paul Griffiths},
-  address       = {São Paulo},
-  annote        = {Tradução: Marcos Santarrita, Alda Porto. Revisão:
-                  Eduardo Brandão. Título original: The encyclopaedia of
-                  twentieth century music}
+@Book{		  griffiths95:enciclopedia,
+  title		= {Enciclopédia da Música do Século XX},
+  publisher	= {Martins Fontes},
+  year		= {1995},
+  author	= {Paul Griffiths},
+  address	= {São Paulo},
+  annote	= {Tradução: Marcos Santarrita, Alda Porto. Revisão:
+		  Eduardo Brandão. Título original: The encyclopaedia of
+		  twentieth century music},
+  keywords	= {music dictionary}
 }
 
-@Book{            grove.ea80:grove,
-  title         = {The New Grove dictionary of music and musicians},
-  publisher     = {Macmillan Publishers; Grove's Dictionaries of Music},
-  year          = {1980},
-  author        = {George Grove and Stanley Sadie},
-  address       = {London Washington, D.C.},
-  editor        = {Stanley Sadie}
+@Book{		  grove.ea80:grove,
+  title		= {The New Grove dictionary of music and musicians},
+  publisher	= {Macmillan Publishers; Grove's Dictionaries of Music},
+  year		= {1980},
+  author	= {George Grove and Stanley Sadie},
+  address	= {London Washington, D.C.},
+  editor	= {Stanley Sadie},
+  keywords	= {music dictionary}
 }
 
-@Book{            kennedy90:concise,
-  title         = {The concise Oxford dictionary of music: based on the
-                  original publication},
-  publisher     = {Oxford University Press},
-  year          = {1990},
-  author        = {Michael Kennedy},
-  address       = {Oxford England and New York}
+@Book{		  kennedy90:concise,
+  title		= {The concise Oxford dictionary of music: based on the
+		  original publication},
+  publisher	= {Oxford University Press},
+  year		= {1990},
+  author	= {Michael Kennedy},
+  address	= {Oxford England and New York},
+  keywords	= {music dictionary}
 }
 
-@Misc{            macy,
-  author        = {Laura Williams Macy},
-  title         = {Grove music},
-  howpublished  = {Oxford University Press},
-  abstract      = {Includes the full text with ongoing updates of The new
-                  Grove dictionary of music and musicians, 2nd ed., The new
-                  Grove dictionary of opera, and The new Grove dictionary of
-                  Jazz, 2nd ed.},
-  address       = {Basingstoke, England},
-  annote        = {Disponível em \url{http://www.grovemusic.com/}},
-  publisher     = {Macmillan}
+@Misc{		  macy,
+  author	= {Laura Williams Macy},
+  title		= {Grove music},
+  howpublished	= {Oxford University Press},
+  abstract	= {Includes the full text with ongoing updates of The new
+		  Grove dictionary of music and musicians, 2nd ed., The new
+		  Grove dictionary of opera, and The new Grove dictionary of
+		  Jazz, 2nd ed.},
+  address	= {Basingstoke, England},
+  annote	= {Disponível em \url{http://www.grovemusic.com/}},
+  publisher	= {Macmillan},
+  keywords	= {music dictionary}
 }
 
-@Book{            michels82:atlas,
-  title         = {Atlas de música},
-  publisher     = {Alianza},
-  year          = {1982},
-  author        = {Ulrich Michels},
-  address       = {Madrid}
+@Book{		  michels82:atlas,
+  title		= {Atlas de música},
+  publisher	= {Alianza},
+  year		= {1982},
+  author	= {Ulrich Michels},
+  address	= {Madrid},
+  keywords	= {music dictionary}
 }
 
-@Book{            apel69:harvard,
-  title         = {Harvard Dictionary of Music},
-  publisher     = {Belknap Press of Harvard University Press},
-  year          = {1969},
-  editor        = {Willi Apel},
-  address       = {Cambridge, Mass},
-  edition       = {2. ed. rev. enl.}
+@Book{		  apel69:harvard,
+  title		= {Harvard Dictionary of Music},
+  publisher	= {Belknap Press of Harvard University Press},
+  year		= {1969},
+  editor	= {Willi Apel},
+  address	= {Cambridge, Mass},
+  edition	= {2. ed. rev. enl.},
+  keywords	= {music dictionary}
 }
 
-@Book{            kennedy94:dicionario,
-  title         = {Dicionário Oxford de Música},
-  publisher     = {Don Quixote},
-  year          = {1994},
-  editor        = {Michael Kennedy},
-  address       = {Lisboa},
-  annote        = {Trad. Gabriela Gomes da Cruz and Rui Neri and Miguel
-                  Sobral Cid}
+@Book{		  kennedy94:dicionario,
+  title		= {Dicionário Oxford de Música},
+  publisher	= {Don Quixote},
+  year		= {1994},
+  editor	= {Michael Kennedy},
+  address	= {Lisboa},
+  annote	= {Trad. Gabriela Gomes da Cruz and Rui Neri and Miguel
+		  Sobral Cid},
+  keywords	= {music dictionary}
 }
 
-@Book{            randel86:harvard,
-  title         = {The New Harvard Dictionary of Music},
-  publisher     = {Belknap Press of Harvard University Press},
-  year          = {1986},
-  editor        = {Don Michael Randel},
-  address       = {Cambridge, Mass}
+@Book{		  randel86:harvard,
+  title		= {The New Harvard Dictionary of Music},
+  publisher	= {Belknap Press of Harvard University Press},
+  year		= {1986},
+  editor	= {Don Michael Randel},
+  address	= {Cambridge, Mass},
+  keywords	= {music dictionary}
 }
