--- a/music-emotion.bib
+++ b/music-emotion.bib
@@ -1,7 +1,10 @@
-@Book{           rapee24:motion,
-  author        = {Erno Rapee},
-  title         = {Motion picture moods for pianists and organists: rapid-reference collection of selected pieces},
-  publisher     = {Schirmer},
-  year          = 1924,
-  address       = {New York, NY}
+
+@Book{		  rapee24:motion,
+  author	= {Erno Rapee},
+  title		= {Motion picture moods for pianists and organists:
+		  rapid-reference collection of selected pieces},
+  publisher	= {Schirmer},
+  year		= 1924,
+  address	= {New York, NY},
+  keywords	= {music emotion}
 }
