--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -1,464 +1,514 @@
-@book{beethoven70:complete,
-  author =       {L. V. Beethoven},
-  title =        {Complete String Quartets},
-  year =         1970,
-  publisher =    {New York: Dover Publications}
+
+@Book{		  beethoven70:complete,
+  author	= {L. V. Beethoven},
+  title		= {Complete String Quartets},
+  year		= 1970,
+  publisher	= {New York: Dover Publications},
+  keywords	= {music harmony and theory}
 }
 
-@article{willner96:more,
-  title =        {More on Handel and the Hemiola: Overlapping
-                  Hemiolas},
-  volume =       2,
-  number =       3,
-  author =       {Channan Willner},
-  journal =      {Music Theory On-Line},
-  year =         1996,
+@Article{	  willner96:more,
+  title		= {More on Handel and the Hemiola: Overlapping Hemiolas},
+  volume	= 2,
+  number	= 3,
+  author	= {Channan Willner},
+  journal	= {Music Theory On-Line},
+  year		= 1996,
+  keywords	= {music harmony and theory}
 }
 
-@inbook{oliveira94:musica,
-  author =       {Jamary Oliveira},
-  chapter =      {Pseudópodes II},
-  title =        {A Música de Jamary Oliveira: Estudos Analíticos},
-  year =         1994,
-  publisher =    {Porto Alegre: setor gráfico do CPG-música/UFRGS}
+@InBook{	  oliveira94:musica,
+  author	= {Jamary Oliveira},
+  chapter	= {Pseudópodes II},
+  title		= {A Música de Jamary Oliveira: Estudos Analíticos},
+  year		= 1994,
+  publisher	= {Porto Alegre: setor gráfico do CPG-música/UFRGS},
+  keywords	= {music harmony and theory}
 }
 
-@book{kramer88:time,
-  author =       {Jonathan D. Kramer},
-  title =        {The Time of Music},
-  publisher =    {New York: Schirmer Books},
-  year =         1988
+@Book{		  kramer88:time,
+  author	= {Jonathan D. Kramer},
+  title		= {The Time of Music},
+  publisher	= {New York: Schirmer Books},
+  year		= 1988,
+  keywords	= {music harmony and theory}
 }
 
-@book{lerdahl.ea90:generative,
-  author =       {Fred Lerdahl and Ray Jackendoff},
-  title =        {A Generative Theory of Tonal Music},
-  year =         1990,
-  publisher =    {Massachusetts: MIT Prees series}
+@Book{		  lerdahl.ea90:generative,
+  author	= {Fred Lerdahl and Ray Jackendoff},
+  title		= {A Generative Theory of Tonal Music},
+  year		= 1990,
+  publisher	= {Massachusetts: MIT Prees series},
+  keywords	= {music harmony and theory}
 }
 
-@article{taylor97:chopin,
-  author =       {Stephen A. Taylor},
-  title =        {Chopin, Pygmies, and Tempo Fugue: Ligeti's 'Automne
-                  a Varsovie'},
-  journal =      {Music Theory On-Line},
-  volume =       3,
-  number =       3,
-  year =         1997,
+@Article{	  taylor97:chopin,
+  author	= {Stephen A. Taylor},
+  title		= {Chopin, Pygmies, and Tempo Fugue: Ligeti's 'Automne a
+		  Varsovie'},
+  journal	= {Music Theory On-Line},
+  volume	= 3,
+  number	= 3,
+  year		= 1997,
+  keywords	= {music harmony and theory}
 }
 
-@article{london93:loud,
-  volume =       0,
-  title =        {Loud Rests and Other Strange Metric},
-  author =       {Justin London},
-  year =         1993,
-  number =       2,
-  journal =      {Music Theory On-Line}
+@Article{	  london93:loud,
+  volume	= 0,
+  title		= {Loud Rests and Other Strange Metric},
+  author	= {Justin London},
+  year		= 1993,
+  number	= 2,
+  journal	= {Music Theory On-Line},
+  keywords	= {music harmony and theory}
 }
 
-@article{roeder97:review,
-  author =       {John Roeder},
-  title =        {Review of Christopher F. Hasty, Meter as rhythm},
-  journal =      {Musis Theory Online},
-  year =         1997,
-  volume =       3,
-  number =       1
+@Article{	  roeder97:review,
+  author	= {John Roeder},
+  title		= {Review of Christopher F. Hasty, Meter as rhythm},
+  journal	= {Musis Theory Online},
+  year		= 1997,
+  volume	= 3,
+  number	= 1,
+  keywords	= {music harmony and theory}
 }
 
-@article{renwick94:subject,
-  volume =       0,
-  title =        {'A Subject of Four Notes': William Crotch's
-                  Experiment in Motivic Saturation},
-  number =       10,
-  year =         1994,
-  journal =      {Music Theory On-Line},
-  author =       {Renwick, William, J.}
+@Article{	  renwick94:subject,
+  volume	= 0,
+  title		= {'A Subject of Four Notes': William Crotch's Experiment in
+		  Motivic Saturation},
+  number	= 10,
+  year		= 1994,
+  journal	= {Music Theory On-Line},
+  author	= {Renwick, William, J.},
+  keywords	= {music harmony and theory}
 }
 
-@book{schonberg86:pelleas,
-  author =       {Arnold Schönberg},
-  title =        {Pelleas und Mellisande},
-  year =         1986,
-  publisher =    {New York: Dover Publications}
+@Book{		  schonberg86:pelleas,
+  author	= {Arnold Schönberg},
+  title		= {Pelleas und Mellisande},
+  year		= 1986,
+  publisher	= {New York: Dover Publications},
+  keywords	= {music harmony and theory}
 }
 
-@Article{ferris59:evolution,
-  author       = {Joan Ferris},
-  title        = {The Evolution of Rameau's Harmonic Theories},
-  journal      = jmt,
-  year         = 1959,
-  volume       = 3,
-  number       = 2,
-  pages        = {231--256}
+@Article{	  ferris59:evolution,
+  author	= {Joan Ferris},
+  title		= {The Evolution of Rameau's Harmonic Theories},
+  journal	= jmt,
+  year		= 1959,
+  volume	= 3,
+  number	= 2,
+  pages		= {231--256},
+  keywords	= {music harmony and theory}
 }
 
-@InCollection{sadler02:jean,
-  author       = {Graham Sadler and Thomas Christensen},
-  title        = {Jean-Philippe Rameau},
-  booktitle    = groveol,
-  publisher    = {Macmillan Publishers},
-  year         = 2002,
-  editor       = {Laura Macy},
-  note         = {\url{www.grovemusic.com}}
+@InCollection{	  sadler02:jean,
+  author	= {Graham Sadler and Thomas Christensen},
+  title		= {Jean-Philippe Rameau},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {music harmony and theory}
 }
 
-@Book{shirlaw70:theory,
-  author       = {Matthew Shirlaw},
-  title        = {The Theory of Harmony},
-  publisher    = {Dr. Birchard Coar},
-  address      = {Sarasota, Florida},
-  year         = 1970
+@Book{		  shirlaw70:theory,
+  author	= {Matthew Shirlaw},
+  title		= {The Theory of Harmony},
+  publisher	= {Dr. Birchard Coar},
+  address	= {Sarasota, Florida},
+  year		= 1970,
+  keywords	= {music harmony and theory}
 }
 
-@Article{waesberghe51:guido,
-  author       = {Jos. Smits van Waesberghe},
-  title        = {Guido of Arezzo and Musical Improvisation},
-  journal      = {Disciplina Musica},
-  year         = 1951,
-  volume       = 5,
-  pages        = {55-63}
+@Article{	  waesberghe51:guido,
+  author	= {Jos. Smits van Waesberghe},
+  title		= {Guido of Arezzo and Musical Improvisation},
+  journal	= {Disciplina Musica},
+  year		= 1951,
+  volume	= 5,
+  pages		= {55-63},
+  keywords	= {music harmony and theory}
 }
 
-@Misc{            adams,
-  author        = {Ricci Adams},
-  title         = {Musictheory.net},
-  howpublished  = {Disponível em \url{musictheory.net}},
-  year          = {s.d.}
+@Misc{		  adams,
+  author	= {Ricci Adams},
+  title		= {Musictheory.net},
+  howpublished	= {Disponível em \url{musictheory.net}},
+  year		= {s.d.},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            aldwell.ea89:harmony,
-  title         = {Harmony and voice leading},
-  publisher     = {Harcourt Brace Jovanovich},
-  year          = {1989},
-  author        = {Edward Aldwell and Carl Schachter},
-  address       = {San Diego}
+@Book{		  aldwell.ea89:harmony,
+  title		= {Harmony and voice leading},
+  publisher	= {Harcourt Brace Jovanovich},
+  year		= {1989},
+  author	= {Edward Aldwell and Carl Schachter},
+  address	= {San Diego},
+  keywords	= {music harmony and theory}
 }
 
-@Article{         archibald72:some,
-  author        = {Bruce Archibald},
-  title         = {Some Thoughts on Symmetry in Early Webern: Op. 5, No. 2},
-  journal       = {Perspectives of New Music},
-  year          = 1972,
-  volume        = 10,
-  number        = 2,
-  pages         = {159--163},
-  doi           = {10.2307/832341}
+@Article{	  archibald72:some,
+  author	= {Bruce Archibald},
+  title		= {Some Thoughts on Symmetry in Early Webern: Op. 5, No. 2},
+  journal	= {Perspectives of New Music},
+  year		= 1972,
+  volume	= 10,
+  number	= 2,
+  pages		= {159--163},
+  doi		= {10.2307/832341},
+  keywords	= {music harmony and theory}
 }
 
-@Article{         babbitt61:set,
-  author        = {Milton Babbitt},
-  title         = {Set Structure as a Compositional Determinant},
-  journal       = {Journal of Music Theory},
-  year          = {1961},
-  volume        = {5},
-  pages         = {72--94},
-  number        = {1},
-  publisher     = {Duke University Press}
+@Article{	  babbitt61:set,
+  author	= {Milton Babbitt},
+  title		= {Set Structure as a Compositional Determinant},
+  journal	= {Journal of Music Theory},
+  year		= {1961},
+  volume	= {5},
+  pages		= {72--94},
+  number	= {1},
+  publisher	= {Duke University Press},
+  keywords	= {music harmony and theory}
 }
 
-@Article{         babbitt60:twelve-tone,
-  author        = {Milton Babbitt},
-  title         = {Twelve-Tone Invariants as Compositional Determinants},
-  journal       = {The Musical Quarterly},
-  year          = {1960},
-  volume        = {46},
-  pages         = {246--259},
-  number        = {2},
-  publisher     = {JSTOR}
+@Article{	  babbitt60:twelve-tone,
+  author	= {Milton Babbitt},
+  title		= {Twelve-Tone Invariants as Compositional Determinants},
+  journal	= {The Musical Quarterly},
+  year		= {1960},
+  volume	= {46},
+  pages		= {246--259},
+  number	= {2},
+  publisher	= {JSTOR},
+  keywords	= {music harmony and theory}
 }
 
-@Article{         beach79:pitch,
-  author        = {David W. Beach},
-  title         = {Pitch Structure and the Analytic Process in Atonal Music:
-                  An Interpretation of the Theory of Sets},
-  journal       = {Music Theory Spectrum},
-  year          = 1979,
-  volume        = 1,
-  pages         = {7--22},
-  month         = {Spring}
+@Article{	  beach79:pitch,
+  author	= {David W. Beach},
+  title		= {Pitch Structure and the Analytic Process in Atonal Music:
+		  An Interpretation of the Theory of Sets},
+  journal	= {Music Theory Spectrum},
+  year		= 1979,
+  volume	= 1,
+  pages		= {7--22},
+  month		= {Spring},
+  keywords	= {music harmony and theory}
 }
 
-@Misc{            bordini,
-  author        = {Ricardo Bordini},
-  title         = {Departamento de Composição, Literatura e Estruturação
-                  Musical. Materiais Didáticos},
-  howpublished  = {Disponível em
-                  \url{www.clem.ufba.br/materiais-didaticos.html}},
-  year          = {s.d.}
+@Misc{		  bordini,
+  author	= {Ricardo Bordini},
+  title		= {Departamento de Composição, Literatura e Estruturação
+		  Musical. Materiais Didáticos},
+  howpublished	= {Disponível em
+		  \url{www.clem.ufba.br/materiais-didaticos.html}},
+  year		= {s.d.},
+  keywords	= {music harmony and theory}
 }
 
-@PhDThesis{       bordini03:teoria,
-  author        = {Ricardo Mazzini Bordini},
-  title         = {A teoria pós-tonal e o processador de classes de notas
-                  aplicados à composição musical: um tutorial},
-  school        = {Universidade Federal da Bahia. Escola de Música},
-  year          = {2003},
-  type          = {Tese (doutorado)},
-  address       = {Salvador},
-  abstract      = {Este trabalho tem por objeto a elaboração de um Tutorial
-                  utilizando recursos de hipertexto para vincular: 1)
-                  conceitos e definições da Teoria Pós-tonal, 2) as
-                  operações do Processador de Classes de Notas (PCN) do Dr.
-                  Jamary Oliveira, e 3) exercícios de composição. Essa
-                  integração permite ao usuário transferir o conhecimento
-                  entre as duas primeiras seções e aplicar o aprendizado na
-                  terceira. O Capítulo 1 aborda as questões referentes à
-                  estrutura formal do trabalho e os aspectos técnicos
-                  envolvidos em sua realização. O Capítulo 2 apresenta um
-                  breve histórico da geração da Teoria, detalhes da
-                  documentação do PCN, e comentários sobre a tradução do
-                  livro: Introduction to Post-Tonal Theory, do Dr. Joseph N.
-                  Straus, tradução essa que autorizada pelo autor vai em
-                  anexo. Esse capítulo motiva o Apêndice 1, o qual contém
-                  dados estatísticos sobre as obras mais utilizadas como
-                  exemplo para tópicos da Teoria. O Capítulo 3 compreende
-                  basicamente as questões relativas ao Tutorial e remete-se
-                  a três apêndices: o Apêndice 2, que lista acrônimos
-                  ligados à XML (linguagem de marcação utilizada no
-                  Tutorial); o Apêndice 3, que inclui a documentação do
-                  XML Schema e a codificação em XML do Tutorial; e o
-                  Apêndice 4, que traz a composição musical originada da
-                  resolução dos exercícios. Finalmente, o Capítulo 4
-                  contém a conclusão do trabalho. Há também um CD anexo
-                  contendo o Tutorial, a documentação do Schema em formato
-                  HTML, e uma gravação digital da composição.},
-  annote        = {Orientador: Jamary Oliveira},
-  citeseerurl   = {http://www.ufba.br/tedesimples/tde_busca/arquivo.php?codArquivo=277
-                  http://www.ufba.br/tedesimples/tde_busca/arquivo.php?codArquivo=278}
-                  ,
-  file          = {bordini03:teoria-a.pdf}
+@PhDThesis{	  bordini03:teoria,
+  author	= {Ricardo Mazzini Bordini},
+  title		= {A teoria pós-tonal e o processador de classes de notas
+		  aplicados à composição musical: um tutorial},
+  school	= {Universidade Federal da Bahia. Escola de Música},
+  year		= {2003},
+  type		= {Tese (doutorado)},
+  address	= {Salvador},
+  abstract	= {Este trabalho tem por objeto a elaboração de um Tutorial
+		  utilizando recursos de hipertexto para vincular: 1)
+		  conceitos e definições da Teoria Pós-tonal, 2) as
+		  operações do Processador de Classes de Notas (PCN) do Dr.
+		  Jamary Oliveira, e 3) exercícios de composição. Essa
+		  integração permite ao usuário transferir o conhecimento
+		  entre as duas primeiras seções e aplicar o aprendizado na
+		  terceira. O Capítulo 1 aborda as questões referentes à
+		  estrutura formal do trabalho e os aspectos técnicos
+		  envolvidos em sua realização. O Capítulo 2 apresenta um
+		  breve histórico da geração da Teoria, detalhes da
+		  documentação do PCN, e comentários sobre a tradução do
+		  livro: Introduction to Post-Tonal Theory, do Dr. Joseph N.
+		  Straus, tradução essa que autorizada pelo autor vai em
+		  anexo. Esse capítulo motiva o Apêndice 1, o qual contém
+		  dados estatísticos sobre as obras mais utilizadas como
+		  exemplo para tópicos da Teoria. O Capítulo 3 compreende
+		  basicamente as questões relativas ao Tutorial e remete-se
+		  a três apêndices: o Apêndice 2, que lista acrônimos
+		  ligados à XML (linguagem de marcação utilizada no
+		  Tutorial); o Apêndice 3, que inclui a documentação do
+		  XML Schema e a codificação em XML do Tutorial; e o
+		  Apêndice 4, que traz a composição musical originada da
+		  resolução dos exercícios. Finalmente, o Capítulo 4
+		  contém a conclusão do trabalho. Há também um CD anexo
+		  contendo o Tutorial, a documentação do Schema em formato
+		  HTML, e uma gravação digital da composição.},
+  annote	= {Orientador: Jamary Oliveira},
+  citeseerurl	= {http://www.ufba.br/tedesimples/tde_busca/arquivo.php?codArquivo=277
+		  http://www.ufba.br/tedesimples/tde_busca/arquivo.php?codArquivo=278}
+		  ,
+  file		= {bordini03:teoria-a.pdf},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            forte73:structure,
-  title         = {The Structure of Atonal Music},
-  publisher     = {Yale University Press},
-  year          = {1973},
-  author        = {Allen Forte},
-  address       = {New Haven},
-  isbn          = {300016107}
+@Book{		  forte73:structure,
+  title		= {The Structure of Atonal Music},
+  publisher	= {Yale University Press},
+  year		= {1973},
+  author	= {Allen Forte},
+  address	= {New Haven},
+  isbn		= {300016107},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            forte79:tonal,
-  title         = {Tonal harmony in concept and practice},
-  publisher     = {Holt Rinehart and Winston},
-  year          = {1979},
-  author        = {Allen Forte},
-  address       = {New York}
+@Book{		  forte79:tonal,
+  title		= {Tonal harmony in concept and practice},
+  publisher	= {Holt Rinehart and Winston},
+  year		= {1979},
+  author	= {Allen Forte},
+  address	= {New York},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            gauldin97:harmonic,
-  title         = {Harmonic practice in tonal music},
-  publisher     = {W.W. Norton},
-  year          = {1997},
-  author        = {Robert Gauldin},
-  pages         = {xxii, 680},
-  address       = {New York},
-  annote        = {http://purl.dlib.indiana.edu/iudl/variations/sound/AHA3291}
-                  
+@Book{		  gauldin97:harmonic,
+  title		= {Harmonic practice in tonal music},
+  publisher	= {W.W. Norton},
+  year		= {1997},
+  author	= {Robert Gauldin},
+  pages		= {xxii, 680},
+  address	= {New York},
+  annote	= {http://purl.dlib.indiana.edu/iudl/variations/sound/AHA3291}
+		  ,
+  keywords	= {music harmony and theory}
 }
 
-@Book{            gauldin05:harmonic,
-  title         = {Harmonic practice in tonal music},
-  publisher     = {W.W. Norton},
-  year          = {2005},
-  author        = {Robert Gauldin},
-  address       = {New York},
-  edition       = {2th}
+@Book{		  gauldin05:harmonic,
+  title		= {Harmonic practice in tonal music},
+  publisher	= {W.W. Norton},
+  year		= {2005},
+  author	= {Robert Gauldin},
+  address	= {New York},
+  edition	= {2th},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            green79:form,
-  title         = {Form in tonal music: an introduction to analysis},
-  publisher     = {Holt Rinehart and Winston},
-  year          = {1979},
-  author        = {Douglass M. Green},
-  address       = {New York}
+@Book{		  green79:form,
+  title		= {Form in tonal music: an introduction to analysis},
+  publisher	= {Holt Rinehart and Winston},
+  year		= {1979},
+  author	= {Douglass M. Green},
+  address	= {New York},
+  keywords	= {music harmony and theory}
 }
 
-@Article{         kabbash84:aggregate-derived,
-  author        = {Paul Kabbash},
-  title         = {Aggregate-Derived Symmetry in Webern's "Early Works"},
-  journal       = {Journal of Music Theory},
-  year          = 1984,
-  volume        = 28,
-  number        = 2,
-  pages         = {225--250},
-  doi           = {10.2307/843533}
+@Article{	  kabbash84:aggregate-derived,
+  author	= {Paul Kabbash},
+  title		= {Aggregate-Derived Symmetry in Webern's "Early Works"},
+  journal	= {Journal of Music Theory},
+  year		= 1984,
+  volume	= 28,
+  number	= 2,
+  pages		= {225--250},
+  doi		= {10.2307/843533},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            koechlin46:traite,
-  title         = {Traité de l'Harmonie},
-  publisher     = {Max Eschig},
-  year          = {1946},
-  author        = {Charles Koechlin},
-  volume        = {3},
-  address       = {Paris}
+@Book{		  koechlin46:traite,
+  title		= {Traité de l'Harmonie},
+  publisher	= {Max Eschig},
+  year		= {1946},
+  author	= {Charles Koechlin},
+  volume	= {3},
+  address	= {Paris},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            kohs76:musical,
-  title         = {Musical Form: Studies in Analysis and Synthesis},
-  publisher     = {Houghton Wifflin},
-  year          = {1976},
-  author        = {Ellis B Kohs},
-  address       = {Boston},
-  owner         = {marcos},
-  timestamp     = {2007.03.22}
+@Book{		  kohs76:musical,
+  title		= {Musical Form: Studies in Analysis and Synthesis},
+  publisher	= {Houghton Wifflin},
+  year		= {1976},
+  author	= {Ellis B Kohs},
+  address	= {Boston},
+  owner		= {marcos},
+  timestamp	= {2007.03.22},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            kostka.ea00:tonal,
-  author        = {Stefan M. Kostka and Dorothy Payne},
-  title         = {Tonal Harmony, with an introduction to twentieth-century music},
-  publisher     = {McGraw-Hill},
-  year          = 2000,
-  address       = {Boston},
-  edition       = {4th}
+@Book{		  kostka.ea00:tonal,
+  author	= {Stefan M. Kostka and Dorothy Payne},
+  title		= {Tonal Harmony, with an introduction to twentieth-century
+		  music},
+  publisher	= {McGraw-Hill},
+  year		= 2000,
+  address	= {Boston},
+  edition	= {4th},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            kostka.ea00:workbook,
-  title         = {Workbook for Tonal harmony, with an introduction to
-                  twentieth-century music},
-  publisher     = {McGraw-Hill College},
-  year          = {2000},
-  author        = {Stefan M. Kostka and Dorothy Payne},
-  address       = {Boston}
+@Book{		  kostka.ea00:workbook,
+  title		= {Workbook for Tonal harmony, with an introduction to
+		  twentieth-century music},
+  publisher	= {McGraw-Hill College},
+  year		= {2000},
+  author	= {Stefan M. Kostka and Dorothy Payne},
+  address	= {Boston},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            kostka.ea89:tonal,
-  title         = {Tonal harmony, with an introduction to twentieth-century
-                  music},
-  publisher     = {A.A. Knopf},
-  year          = {1989},
-  author        = {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
-  address       = {New York}
+@Book{		  kostka.ea89:tonal,
+  title		= {Tonal harmony, with an introduction to twentieth-century
+		  music},
+  publisher	= {A.A. Knopf},
+  year		= {1989},
+  author	= {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
+  address	= {New York},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            kostka.ea03:tonal,
-  title         = {Tonal harmony, with an introduction to twentieth-century
-                  music},
-  publisher     = {McGraw-Hill},
-  year          = {2003},
-  author        = {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
-  address       = {Boston},
-  edition       = {5th}
+@Book{		  kostka.ea03:tonal,
+  title		= {Tonal harmony, with an introduction to twentieth-century
+		  music},
+  publisher	= {McGraw-Hill},
+  year		= {2003},
+  author	= {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
+  address	= {Boston},
+  edition	= {5th},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            lerdahl.ea83:generative,
-  author        = {Fred Lerdahl and Ray Jackendoff},
-  title         = {A Generative Theory of Tonal Music},
-  publisher     = {MIT Press},
-  year          = 1983,
-  address       = {Cambridge}
+@Book{		  lerdahl.ea83:generative,
+  author	= {Fred Lerdahl and Ray Jackendoff},
+  title		= {A Generative Theory of Tonal Music},
+  publisher	= {MIT Press},
+  year		= 1983,
+  address	= {Cambridge},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            morris33:figured,
-  author        = {Reginald Owen Morris},
-  title         = {Figured Harmony at the Keyboard},
-  publisher     = {Oxford University Press},
-  year          = {1933},
-  volume        = {I - Part I},
-  address       = {London},
-  isbn          = {193214717}
+@Book{		  morris33:figured,
+  author	= {Reginald Owen Morris},
+  title		= {Figured Harmony at the Keyboard},
+  publisher	= {Oxford University Press},
+  year		= {1933},
+  volume	= {I - Part I},
+  address	= {London},
+  isbn		= {193214717},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            motte89:armonia,
-  author        = {{Diether de la} Motte},
-  title         = {Armonia},
-  publisher     = {Editorial Labor},
-  year          = 1989,
-  address       = {Barcelona},
-  note          = {Trad. Luis Romano Haces}
+@Book{		  motte89:armonia,
+  author	= {{Diether de la} Motte},
+  title		= {Armonia},
+  publisher	= {Editorial Labor},
+  year		= 1989,
+  address	= {Barcelona},
+  note		= {Trad. Luis Romano Haces},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            perle91:serial,
-  author        = {George Perle},
-  title         = {Serial Composition and Atonality: An Introduction to the
-                  Music of Schoenberg, Berg and Webern},
-  publisher     = {University of California Press},
-  year          = 1991,
-  address       = {Berkeley e Los Angeles},
-  edition       = {6 ed. rev.}
+@Book{		  perle91:serial,
+  author	= {George Perle},
+  title		= {Serial Composition and Atonality: An Introduction to the
+		  Music of Schoenberg, Berg and Webern},
+  publisher	= {University of California Press},
+  year		= 1991,
+  address	= {Berkeley e Los Angeles},
+  edition	= {6 ed. rev.},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            perle77:twelve-tone,
-  author        = {George Perle},
-  title         = {Twelve-tone Tonality},
-  publisher     = {University of California Press},
-  year          = 1977,
-  address       = {Berkeley e Los Angeles}
+@Book{		  perle77:twelve-tone,
+  author	= {George Perle},
+  title		= {Twelve-tone Tonality},
+  publisher	= {University of California Press},
+  year		= 1977,
+  address	= {Berkeley e Los Angeles},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            piston59:harmony,
-  title         = {Harmony},
-  publisher     = {Victon Gollancz Ltd},
-  year          = {1959},
-  author        = {Walter Piston},
-  address       = {London},
-  file          = {piston59:harmony.pdf}
+@Book{		  piston59:harmony,
+  title		= {Harmony},
+  publisher	= {Victon Gollancz Ltd},
+  year		= {1959},
+  author	= {Walter Piston},
+  address	= {London},
+  file		= {piston59:harmony.pdf},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            rahn80:basic,
-  author        = {John Rahn},
-  title         = {Basic Atonal Theory},
-  publisher     = {Longman},
-  year          = 1980,
-  address       = {New York}
+@Book{		  rahn80:basic,
+  author	= {John Rahn},
+  title		= {Basic Atonal Theory},
+  publisher	= {Longman},
+  year		= 1980,
+  address	= {New York},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            reti51:tematic,
-  author        = {Rudolph Réti},
-  title         = {The tematic Process in music},
-  publisher     = {MacMillan},
-  year          = 1951,
-  address       = {New York}
+@Book{		  reti51:tematic,
+  author	= {Rudolph Réti},
+  title		= {The tematic Process in music},
+  publisher	= {MacMillan},
+  year		= 1951,
+  address	= {New York},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            schoenberg54:structural,
-  author        = {Arnold Schoenberg},
-  title         = {Structural Functions of Harmony},
-  publisher     = {W.W. Norton},
-  year          = 1954,
-  address       = {New York}}
-
-@Book{            straus90:introduction,
-  title         = {Introduction to post-tonal theory},
-  publisher     = {Prentice Hall},
-  year          = {1990},
-  author        = {Joseph Nathan Straus},
-  address       = {Englewood Cliffs, N.J.},
-  isbn          = {136866921}
+@Book{		  schoenberg54:structural,
+  author	= {Arnold Schoenberg},
+  title		= {Structural Functions of Harmony},
+  publisher	= {W.W. Norton},
+  year		= 1954,
+  address	= {New York},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            waesberghe55:textbook,
-  author        = {Joseph Smits van Waesberghe},
-  title         = {A Textbook of Melody: A Course in Functional Melodic
-                  Analysis},
-  publisher     = {American Institute of Musicology},
-  year          = 1955,
-  note          = {Trad. W.A.G. Doyle-Davidson},
-  annote        = {Disponível em
-                  \url{http://www.archive.org/details/textbookofmelody007516mbp}}
-                  
+@Book{		  straus90:introduction,
+  title		= {Introduction to post-tonal theory},
+  publisher	= {Prentice Hall},
+  year		= {1990},
+  author	= {Joseph Nathan Straus},
+  address	= {Englewood Cliffs, N.J.},
+  isbn		= {136866921},
+  keywords	= {music harmony and theory}
 }
 
-@Book{            wedge30:applied,
-  title         = {Applied Harmony: A Text-book},
-  publisher     = {G. Schirmer, Inc.},
-  year          = {1930},
-  author        = {George A. Wedge},
-  address       = {New York}
+@Book{		  waesberghe55:textbook,
+  author	= {Joseph Smits van Waesberghe},
+  title		= {A Textbook of Melody: A Course in Functional Melodic
+		  Analysis},
+  publisher	= {American Institute of Musicology},
+  year		= 1955,
+  note		= {Trad. W.A.G. Doyle-Davidson},
+  annote	= {Disponível em
+		  \url{http://www.archive.org/details/textbookofmelody007516mbp}}
+		  ,
+  keywords	= {music harmony and theory}
 }
 
-@Book{            zamacois48:tratado,
-  author        = {Joaquin Zamacois},
-  title         = {Tratado de Armonia},
-  publisher     = {Editorial Labor},
-  year          = 1948,
-  volume        = 3,
-  address       = {Barcelona}
+@Book{		  wedge30:applied,
+  title		= {Applied Harmony: A Text-book},
+  publisher	= {G. Schirmer, Inc.},
+  year		= {1930},
+  author	= {George A. Wedge},
+  address	= {New York},
+  keywords	= {music harmony and theory}
 }
 
-@book{mazzola.ea02:topos,
-  title={{The topos of music}},
-  author={Mazzola, G. and others},
-  year=2002,
-  publisher={Birkh{\"a}user}
+@Book{		  zamacois48:tratado,
+  author	= {Joaquin Zamacois},
+  title		= {Tratado de Armonia},
+  publisher	= {Editorial Labor},
+  year		= 1948,
+  volume	= 3,
+  address	= {Barcelona},
+  keywords	= {music harmony and theory}
+}
+
+@Book{		  mazzola.ea02:topos,
+  title		= {{The topos of music}},
+  author	= {Mazzola, G. and others},
+  year		= 2002,
+  publisher	= {Birkh{\"a}user},
+  keywords	= {music harmony and theory}
 }
