--- a/perception.bib
+++ b/perception.bib
@@ -1,201 +1,209 @@
-@Article{brady70:fixed,
-  author       = {Paul T. Brady},
-  title        = {Fixed-scale Mechanism of Absolute Pitch},
-  journal      = jasa,
-  year         = 1970,
-  volume       = 48,
-  pages        = {883--887},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
 
+@Article{	  brady70:fixed,
+  author	= {Paul T. Brady},
+  title		= {Fixed-scale Mechanism of Absolute Pitch},
+  journal	= jasa,
+  year		= 1970,
+  volume	= 48,
+  pages		= {883--887},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{cuddy68:practice,
-  author       = {Lola L. Cuddy},
-  title        = {Practice Effects in the Absolute Judgment of Pitch},
-  journal      = jasa,
-  year         = 1968,
-  volume       = 43,
-  number       = 5,
-  pages        = {1069--1076},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  cuddy68:practice,
+  author	= {Lola L. Cuddy},
+  title		= {Practice Effects in the Absolute Judgment of Pitch},
+  journal	= jasa,
+  year		= 1968,
+  volume	= 43,
+  number	= 5,
+  pages		= {1069--1076},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{cuddy70:training,
-  author       = {Lola L. Cuddy},
-  title        = {Training the absolute identification of pitch},
-  journal      = {Perception and Psychophysics},
-  year         = 1970,
-  volume       = 8,
-  pages        = {265--269},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  cuddy70:training,
+  author	= {Lola L. Cuddy},
+  title		= {Training the absolute identification of pitch},
+  journal	= {Perception and Psychophysics},
+  year		= 1970,
+  volume	= 8,
+  pages		= {265--269},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{lockhead81:practically,
-  author       = {Gregory R. Lockhead and Robert Byrd},
-  title        = {Practically Perfect Pitch},
-  journal      = jasa,
-  year         = 1981,
-  volume       = 70,
-  number       = 2,
-  pages        = {387--389},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  lockhead81:practically,
+  author	= {Gregory R. Lockhead and Robert Byrd},
+  title		= {Practically Perfect Pitch},
+  journal	= jasa,
+  year		= 1981,
+  volume	= 70,
+  number	= 2,
+  pages		= {387--389},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{miller97:pitch,
-  author       = {Leon K. Miller and Holly Clausen},
-  title        = {Pitch Identification in Children and Adults: Naming and Discrimination},
-  journal      = pm,
-  year         = 1997,
-  volume       = 24,
-  where        = {paper},
-  keywords     = {perception},
-  pages        = {4--17}
+@Article{	  miller97:pitch,
+  author	= {Leon K. Miller and Holly Clausen},
+  title		= {Pitch Identification in Children and Adults: Naming and
+		  Discrimination},
+  journal	= pm,
+  year		= 1997,
+  volume	= 24,
+  where		= {paper},
+  keywords	= {perception},
+  pages		= {4--17}
 }
 
-@Article{miyazaki89:absolute,
-  author       = {Ken'ichi Miyazaki},
-  title        = {Absolute Pitch Identification: Effects of Timber and Pitch Region},
-  journal      = mp,
-  year         = 1989,
-  volume       = 7,
-  number       = 1,
-  pages        = {1--14},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  miyazaki89:absolute,
+  author	= {Ken'ichi Miyazaki},
+  title		= {Absolute Pitch Identification: Effects of Timber and Pitch
+		  Region},
+  journal	= mp,
+  year		= 1989,
+  volume	= 7,
+  number	= 1,
+  pages		= {1--14},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{miyazaki92:perception,
-  author       = {Ken'ichi Miyazaki},
-  title        = {Perception of Musical Intervals by Absolute Pitch Possessors},
-  journal      = mp,
-  year         = 1992,
-  volume       = 9,
-  number       = 4,
-  pages        = {413--426},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  miyazaki92:perception,
+  author	= {Ken'ichi Miyazaki},
+  title		= {Perception of Musical Intervals by Absolute Pitch
+		  Possessors},
+  journal	= mp,
+  year		= 1992,
+  volume	= 9,
+  number	= 4,
+  pages		= {413--426},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{miyazaki95:perception,
-  author       = {Ken'ichi Miyazaki},
-  title        = {Perception of relative pitch with different references: Some absolute-pitch listeners can't tell musical interval names},
-  journal      = {Perception and Psychophysics},
-  year         = 1995,
-  volume       = 57,
-  number       = 1,
-  pages        = {962--970},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  miyazaki95:perception,
+  author	= {Ken'ichi Miyazaki},
+  title		= {Perception of relative pitch with different references:
+		  Some absolute-pitch listeners can't tell musical interval
+		  names},
+  journal	= {Perception and Psychophysics},
+  year		= 1995,
+  volume	= 57,
+  number	= 1,
+  pages		= {962--970},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{heller72:practice,
-  author       = {Morton A. Heller and Carl Auerbach},
-  title        = {Practice effects in the absolute judgment of frequency},
-  journal      = {Psychon Sci},
-  year         = 1972,
-  volume       = 26,
-  number       = 4,
-  pages        = {222--224},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  heller72:practice,
+  author	= {Morton A. Heller and Carl Auerbach},
+  title		= {Practice effects in the absolute judgment of frequency},
+  journal	= {Psychon Sci},
+  year		= 1972,
+  volume	= 26,
+  number	= 4,
+  pages		= {222--224},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{peacock85:synesthetic,
-  author       = {Kenneth Peacock},
-  title        = {Synesthetic Perception: Alexander Scriabin's Color Hearing},
-  journal      = mp,
-  year         = 1985,
-  volume       = 2,
-  number       = 4,
-  pages        = {483--506},
-  where        = {paper},
-  keywords     = {perception, synaesthesia}
+@Article{	  peacock85:synesthetic,
+  author	= {Kenneth Peacock},
+  title		= {Synesthetic Perception: Alexander Scriabin's Color
+		  Hearing},
+  journal	= mp,
+  year		= 1985,
+  volume	= 2,
+  number	= 4,
+  pages		= {483--506},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{schellenberg94:frequency,
-  author       = {E. Glenn Schellenberg and Sandra E. Trehub},
-  title        = {Frequency ratios and the discrimination of pure tone sequences},
-  journal      = {Perception and Psychophysics},
-  year         = 1994,
-  volume       = 56,
-  number       = 4,
-  pages        = {472--478},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  schellenberg94:frequency,
+  author	= {E. Glenn Schellenberg and Sandra E. Trehub},
+  title		= {Frequency ratios and the discrimination of pure tone
+		  sequences},
+  journal	= {Perception and Psychophysics},
+  year		= 1994,
+  volume	= 56,
+  number	= 4,
+  pages		= {472--478},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{haack81:case,
-  author       = {Paul A. Haack and Rudolf E. Radocy},
-  title        = {A Case Study of a Chromesthetic},
-  journal      = jrme,
-  year         = 1981,
-  volume       = 29,
-  number       = 2,
-  pages        = {85--90},
-  where        = {paper},
-  keywords     = {perception}
+@Article{	  haack81:case,
+  author	= {Paul A. Haack and Rudolf E. Radocy},
+  title		= {A Case Study of a Chromesthetic},
+  journal	= jrme,
+  year		= 1981,
+  volume	= 29,
+  number	= 2,
+  pages		= {85--90},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{bernard86:synaesthesia,
-  author       = {Jonathan W. Bernard},
-  title        = {Messiaen's Synaesthesia: The Correspondence between Color and Sound Structure in His Music},
-  journal      = mp,
-  year         = 1986,
-  volume       = 4,
-  number       = 1,
-  pages        = {41--68},
-  where        = {paper},
-  keywords     = {perception, synaesthesia}
+@Article{	  bernard86:synaesthesia,
+  author	= {Jonathan W. Bernard},
+  title		= {Messiaen's Synaesthesia: The Correspondence between Color
+		  and Sound Structure in His Music},
+  journal	= mp,
+  year		= 1986,
+  volume	= 4,
+  number	= 1,
+  pages		= {41--68},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{crozier97:absolute,
-  author       = {John B. Crozier},
-  title        = {Absolute Pitch: Practice Makes Perfect, the Earlier the Better},
-  journal      = pm,
-  year         = 1997,
-  volume       = 25,
-  pages        = {110-119},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  crozier97:absolute,
+  author	= {John B. Crozier},
+  title		= {Absolute Pitch: Practice Makes Perfect, the Earlier the
+		  Better},
+  journal	= pm,
+  year		= 1997,
+  volume	= 25,
+  pages		= {110-119},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{rogers87:four,
-  author       = {George L. Rogers},
-  title        = {Four Cases of Pitch-specific Chromesthesia in Trained Musicians with absolute pitch},
-  journal      = pm,
-  year         = 1987,
-  volume       = 15,
-  pages        = {198--207},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
-
+@Article{	  rogers87:four,
+  author	= {George L. Rogers},
+  title		= {Four Cases of Pitch-specific Chromesthesia in Trained
+		  Musicians with absolute pitch},
+  journal	= pm,
+  year		= 1987,
+  volume	= 15,
+  pages		= {198--207},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{takeuchi93:absolute,
-  author       = {Annie H. Takeuchi and Stewart H. Hulse},
-  title        = {Absolute Pitch},
-  journal      = {Psychological Bulletin},
-  year         = 1993,
-  volume       = 113,
-  number       = 2,
-  pages        = {345--361},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  takeuchi93:absolute,
+  author	= {Annie H. Takeuchi and Stewart H. Hulse},
+  title		= {Absolute Pitch},
+  journal	= {Psychological Bulletin},
+  year		= 1993,
+  volume	= 113,
+  number	= 2,
+  pages		= {345--361},
+  where		= {paper},
+  keywords	= {perception}
 }
 
-@Article{wedell34:nature,
-  author       = {Carl H. Wedell},
-  title        = {The Nature of the Absolute Judgment of Pitch},
-  journal      = {Journal of Experimental Psychology},
-  year         = 1934,
-  volume       = 17,
-  number       = 4,
-  pages        = {485--503},
-  where        = {paper},
-  keywords     = {perception, perfect pitch}
+@Article{	  wedell34:nature,
+  author	= {Carl H. Wedell},
+  title		= {The Nature of the Absolute Judgment of Pitch},
+  journal	= {Journal of Experimental Psychology},
+  year		= 1934,
+  volume	= 17,
+  number	= 4,
+  pages		= {485--503},
+  where		= {paper},
+  keywords	= {perception}
 }
-
