--- a/coding.bib
+++ b/coding.bib
@@ -1,46 +1,55 @@
 
-@Article{         brinkman86:binomial,
-  author        = {Brinkman, Alexander R.},
-  title         = {A Binomial Representation of Pitch for Computer Processing
-                  of Musical Data},
-  journal       = {Music Theory Spectrum},
-  year          = 1986,
-  volume        = 8,
-  pages         = {44-57}
+@Article{	  brinkman86:binomial,
+  author	= {Brinkman, Alexander R.},
+  title		= {A Binomial Representation of Pitch for Computer Processing
+		  of Musical Data},
+  journal	= {Music Theory Spectrum},
+  year		= 1986,
+  volume	= 8,
+  pages		= {44-57},
+  keywords	= {coding}
 }
 
-@Article{         hewlett92:base-40,
-  author        = {Hewlett, Walter B.},
-  title         = {A base-40 number-line representation of musical pitch
-                  notation},
-  journal       = {Musikometrika},
-  year          = 1992,
-  volume        = 4,
-  pages         = {1-14},
-  url           = {http://www.ccarh.org/publications/reprints/base40/}
+@Article{	  hewlett92:base-40,
+  author	= {Hewlett, Walter B.},
+  title		= {A base-40 number-line representation of musical pitch
+		  notation},
+  journal	= {Musikometrika},
+  year		= 1992,
+  volume	= 4,
+  pages		= {1-14},
+  url		= {http://www.ccarh.org/publications/reprints/base40/},
+  keywords	= {coding}
 }
 
-@Article{         oliveira01:busca,
-  author        = {Jamary Oliveira},
-  title         = {Em busca de uma codificação},
-  journal       = {Cuadernos Interamericanos De Investigación en Educación
-                  Musical},
-  year          = 2001,
-  volume        = 1,
-  number        = 2,
-  file          = {jamary-CEM02103.pdf}
+@Article{	  oliveira01:busca,
+  author	= {Jamary Oliveira},
+  title		= {Em busca de uma codificação},
+  journal	= {Cuadernos Interamericanos De Investigación en Educación
+		  Musical},
+  year		= 2001,
+  volume	= 1,
+  number	= 2,
+  file		= {jamary-CEM02103.pdf},
+  keywords	= {coding}
 }
 
-@InProceedings{clements80:musical,
-  author =       {Peter J. Clements},
-  title =        {Musical data structures in a multi-use environment},
-  booktitle = {Proceedings of the 1980 International Computer Music Conference},
-  pages =     {231--244},
-  year =      1980}
+@InProceedings{	  clements80:musical,
+  author	= {Peter J. Clements},
+  title		= {Musical data structures in a multi-use environment},
+  booktitle	= {Proceedings of the 1980 International Computer Music
+		  Conference},
+  pages		= {231--244},
+  year		= 1980,
+  keywords	= {coding}
+}
 
-@Unpublished{pullinger.ea07:computer,
-  author =       {Stuart Pullinger and Nicholas Bailey and Graham Hair},
-  title =        {A Computer Representation of Pitch Based on the Spiral of Fifths},
-  note =         {This is a pdf presentation available on the internet},
-  url =          {www.n-ism.org/Papers/Nick\_Bailey/spiral5ths\_slides.pdf},
-  year =      2007}
+@Unpublished{	  pullinger.ea07:computer,
+  author	= {Stuart Pullinger and Nicholas Bailey and Graham Hair},
+  title		= {A Computer Representation of Pitch Based on the Spiral of
+		  Fifths},
+  note		= {This is a pdf presentation available on the internet},
+  url		= {www.n-ism.org/Papers/Nick\_Bailey/spiral5ths\_slides.pdf},
+  year		= 2007,
+  keywords	= {coding}
+}
