--- a/computational-musicology.bib
+++ b/computational-musicology.bib
@@ -1,18 +1,23 @@
 
-@InProceedings{fitsioris.ea08:parallel,
-  author =       {G. Fitsioris and D. Conklin},
-  title =        {Parallel successions of perfect fifths in the Bach chorales},
-  booktitle = {CIM08: Fourth Conference on Interdisciplinary Musicology},
-  year =      2008,
-  address =   {Thessaloniki, Greece}}
+@InProceedings{	  fitsioris.ea08:parallel,
+  author	= {G. Fitsioris and D. Conklin},
+  title		= {Parallel successions of perfect fifths in the Bach
+		  chorales},
+  booktitle	= {CIM08: Fourth Conference on Interdisciplinary Musicology},
+  year		= 2008,
+  address	= {Thessaloniki, Greece},
+  keywords	= {computational musicology}
+}
 
-@InCollection{kugel92:beyond,
- author = {Peter Kugel},
- title = {Beyond computational musicology},
- booktitle = {Understanding music with AI: perspectives on music cognition},
- year = {1992},
- isbn = {0-262-52170-9},
- pages = {30--48},
- publisher = {MIT Press},
- address = {Cambridge, MA, USA},
- }
+@InCollection{	  kugel92:beyond,
+  author	= {Peter Kugel},
+  title		= {Beyond computational musicology},
+  booktitle	= {Understanding music with AI: perspectives on music
+		  cognition},
+  year		= {1992},
+  isbn		= {0-262-52170-9},
+  pages		= {30--48},
+  publisher	= {MIT Press},
+  address	= {Cambridge, MA, USA},
+  keywords	= {computational musicology}
+}
