--- a/computer-science.bib
+++ b/computer-science.bib
@@ -1,170 +1,188 @@
 
-@Article{         allen.ea94:actions,
-  author        = {Allen, James F. and Ferguson, G.},
-  title         = {Actions and events in interval temporal logic},
-  journal       = {Journal of Logic and Computation},
-  year          = 1994,
-  volume        = 4,
-  number        = 5,
-  where         = {94.tr521.Actions_and_events_in_interval_temporal_logic.ps.Z}
-                  
+@Article{	  allen.ea94:actions,
+  author	= {Allen, James F. and Ferguson, G.},
+  title		= {Actions and events in interval temporal logic},
+  journal	= {Journal of Logic and Computation},
+  year		= 1994,
+  volume	= 4,
+  number	= 5,
+  where		= {94.tr521.Actions_and_events_in_interval_temporal_logic.ps.Z}
+		  ,
+  keywords	= {computer science}
 }
 
-@Article{         dijkstra68:go,
-  author        = {Edsger W. Dijkstra},
-  title         = {Go To statement considered harmful},
-  journal       = {Communications of the ACM},
-  year          = 1968,
-  volume        = 11,
-  number        = 3,
-  pages         = {147--148}
+@Article{	  dijkstra68:go,
+  author	= {Edsger W. Dijkstra},
+  title		= {Go To statement considered harmful},
+  journal	= {Communications of the ACM},
+  year		= 1968,
+  volume	= 11,
+  number	= 3,
+  pages		= {147--148},
+  keywords	= {computer science}
 }
 
-@article{         foderaro91:lisp,
- author         = {John Foderaro},
- title          = {LISP: introduction},
- journal        = {Communications of the ACM},
- volume         = 34,
- number         = 9,
- year           = 1991,
- issn           = {0001-0782},
- pages          = 27,
- doi            = {http://doi.acm.org/10.1145/114669.114670},
- publisher      = {ACM},
- address        = {New York, NY, USA},
- }
-
-@Book{            gancarz95:unix,
-  author        = {M. Gancarz},
-  title         = {The UNIX philosophy},
-  publisher     = {Digital Press},
-  year          = 1995,
-  address       = {Boston, MA}
+@Article{	  foderaro91:lisp,
+  author	= {John Foderaro},
+  title		= {LISP: introduction},
+  journal	= {Communications of the ACM},
+  volume	= 34,
+  number	= 9,
+  year		= 1991,
+  issn		= {0001-0782},
+  pages		= 27,
+  doi		= {http://doi.acm.org/10.1145/114669.114670},
+  publisher	= {ACM},
+  address	= {New York, NY, USA},
+  keywords	= {computer science}
 }
 
-@Book{            graham94:lisp,
-  author        = {Paul Graham},
-  title         = {On Lisp: Advanced Techniques for Common Lisp},
-  publisher     = {Prentice Hall},
-  year          = 1994,
-  address       = {Englewood Cliffs, NJ}}
-
-@Book{            kaplan94:constructing,
-  author        = {Randy M. Kaplan},
-  title         = {Constructing language processors for little languages},
-  publisher     = {John Wiley \& Sons},
-  year          = 1994
+@Book{		  gancarz95:unix,
+  author	= {M. Gancarz},
+  title		= {The UNIX philosophy},
+  publisher	= {Digital Press},
+  year		= 1995,
+  address	= {Boston, MA},
+  keywords	= {computer science}
 }
 
-@Book{            lamport94:latex,
-  author        = {Leslie Lamport},
-  title         = {LaTeX: a document preparation system},
-  publisher     = {Addison Wesley Professional},
-  year          = 1994
+@Book{		  graham94:lisp,
+  author	= {Paul Graham},
+  title		= {On Lisp: Advanced Techniques for Common Lisp},
+  publisher	= {Prentice Hall},
+  year		= 1994,
+  address	= {Englewood Cliffs, NJ},
+  keywords	= {computer science}
 }
 
-@InProceedings{   lemos01:metal,
-  author        = {Manuel Lemos},
-  title         = {{MetaL}: {XML} based meta-programming engine developed
-                  with PHP},
-  booktitle     = {PHP Conference 2001},
-  year          = 2001,
-  address       = {Frankfurt},
-  month         = {November},
-  organization  = {PHP-Center and Software \& Support Verlag},
-  keywords      = {xml, programming},
-  where         = {metal.pdf}
+@Book{		  kaplan94:constructing,
+  author	= {Randy M. Kaplan},
+  title		= {Constructing language processors for little languages},
+  publisher	= {John Wiley \& Sons},
+  year		= 1994,
+  keywords	= {computer science}
 }
 
-@Book{            levine.ea92:lex,
-  author        = {John R. Levine and Tony Mason and Doug Brown},
-  title         = {Lex \& Yacc},
-  publisher     = {O'Reilly},
-  year          = 1992,
-  edition       = 2
+@Book{		  lamport94:latex,
+  author	= {Leslie Lamport},
+  title		= {LaTeX: a document preparation system},
+  publisher	= {Addison Wesley Professional},
+  year		= 1994,
+  keywords	= {computer science}
 }
 
-@Book{            marchal00:xml,
-  author        = {Benoît Marchal},
-  title         = {XML: conceitos e aplicações},
-  publisher     = {Editora Berkeley},
-  year          = 2000,
-  address       = {São Paulo},
-  note          = {Trad. Daniel Vieira}
+@InProceedings{	  lemos01:metal,
+  author	= {Manuel Lemos},
+  title		= {{MetaL}: {XML} based meta-programming engine developed
+		  with PHP},
+  booktitle	= {PHP Conference 2001},
+  year		= 2001,
+  address	= {Frankfurt},
+  month		= {November},
+  organization	= {PHP-Center and Software \& Support Verlag},
+  keywords	= {computer science},
+  where		= {metal.pdf}
 }
 
-@Article{         marx02:xml,
-  author        = {Marx},
-  title         = {XML and verbosity},
-  journal       = {Kuro5hin},
-  year          = 2002,
-  month         = dec,
-  url           = {http://www.kuro5hin.org/story/2002/12/2/124015/553}
+@Book{		  levine.ea92:lex,
+  author	= {John R. Levine and Tony Mason and Doug Brown},
+  title		= {Lex \& Yacc},
+  publisher	= {O'Reilly},
+  year		= 1992,
+  edition	= 2,
+  keywords	= {computer science}
 }
 
-@Misc{            meyyappan00:gui,
-  author        = {Alagappan Meyyappan},
-  title         = {{GUI} development using {XML}},
-  url           = {http://www.kku.ac.th/chugra/xml/gui.pdf},
-  where         = {gui.pdf},
-  year          = {2000}
+@Book{		  marchal00:xml,
+  author	= {Benoît Marchal},
+  title		= {XML: conceitos e aplicações},
+  publisher	= {Editora Berkeley},
+  year		= 2000,
+  address	= {São Paulo},
+  note		= {Trad. Daniel Vieira},
+  keywords	= {computer science}
 }
 
-@Article{         miller98:recursive,
-  author        = {Miller, P.A.},
-  title         = {Recursive make considered harmful},
-  journal       = {Journal of AUUG},
-  year          = 1998,
-  volume        = 19,
-  number        = 1,
-  pages         = {14--25},
-  keywords      = {},
-  where         = {paper,auug97.pdf}
+@Article{	  marx02:xml,
+  author	= {Marx},
+  title		= {XML and verbosity},
+  journal	= {Kuro5hin},
+  year		= 2002,
+  month		= dec,
+  url		= {http://www.kuro5hin.org/story/2002/12/2/124015/553},
+  keywords	= {computer science}
 }
 
-@Book{            ousterhout93:tcl,
-  author        = {John K. Ousterhout},
-  title         = {Tcl and the Tk toolkit},
-  publisher     = {Addison-Wesley Publishing Company, Inc.},
-  year          = 1993
+@Misc{		  meyyappan00:gui,
+  author	= {Alagappan Meyyappan},
+  title		= {{GUI} development using {XML}},
+  url		= {http://www.kku.ac.th/chugra/xml/gui.pdf},
+  where		= {gui.pdf},
+  year		= {2000},
+  keywords	= {computer science}
 }
 
-@Misc{            sarkar.ea01:code,
-  author        = {Soumen Sarkar and Craig Cleaveland},
-  title         = {Code generation using XML based document transformation},
-  year          = 2001,
-  note          = {Available at
-                  \url{http://www.theserverside.com/resources/articles/XMLCodeGen/xmltransform.pdf}}
-                  ,
-  where         = {xmltransform.pdf}
+@Article{	  miller98:recursive,
+  author	= {Miller, P.A.},
+  title		= {Recursive make considered harmful},
+  journal	= {Journal of AUUG},
+  year		= 1998,
+  volume	= 19,
+  number	= 1,
+  pages		= {14--25},
+  keywords	= {computer science},
+  where		= {paper,auug97.pdf}
 }
 
-@Book{            shapiro92:common,
-  author        = {Stuart Charles Shapiro},
-  title         = {Common LISP: an interactive approach},
-  publisher     = {Computer Science Press},
-  year          = 1992,
-  address       = {New York}
+@Book{		  ousterhout93:tcl,
+  author	= {John K. Ousterhout},
+  title		= {Tcl and the Tk toolkit},
+  publisher	= {Addison-Wesley Publishing Company, Inc.},
+  year		= 1993,
+  keywords	= {computer science}
 }
 
-@Book{            seibel05:practical,
-  author        = {Peter Seibel},
-  title         = {Practical Common Lisp},
-  publisher     = {Apress},
-  year          = 2005}
-
-@Book{            welch99:practical,
-  author        = {Brent Welch},
-  title         = {Practical Programming in Tcl and Tk},
-  publisher     = {Prentice Hall},
-  year          = 1999,
-  edition       = {3rd}
+@Misc{		  sarkar.ea01:code,
+  author	= {Soumen Sarkar and Craig Cleaveland},
+  title		= {Code generation using XML based document transformation},
+  year		= 2001,
+  note		= {Available at
+		  \url{http://www.theserverside.com/resources/articles/XMLCodeGen/xmltransform.pdf}}
+		  ,
+  where		= {xmltransform.pdf},
+  keywords	= {computer science}
 }
 
-@Article{         zerbst03:processing,
-  author        = {Carsten Zerbst},
-  title         = {Processing XML documents with Tcl and tDOM},
-  journal       = {Linux Magazine},
-  year          = 2003
+@Book{		  shapiro92:common,
+  author	= {Stuart Charles Shapiro},
+  title		= {Common LISP: an interactive approach},
+  publisher	= {Computer Science Press},
+  year		= 1992,
+  address	= {New York},
+  keywords	= {computer science}
 }
 
+@Book{		  seibel05:practical,
+  author	= {Peter Seibel},
+  title		= {Practical Common Lisp},
+  publisher	= {Apress},
+  year		= 2005,
+  keywords	= {computer science}
+}
+
+@Book{		  welch99:practical,
+  author	= {Brent Welch},
+  title		= {Practical Programming in Tcl and Tk},
+  publisher	= {Prentice Hall},
+  year		= 1999,
+  edition	= {3rd},
+  keywords	= {computer science}
+}
+
+@Article{	  zerbst03:processing,
+  author	= {Carsten Zerbst},
+  title		= {Processing XML documents with Tcl and tDOM},
+  journal	= {Linux Magazine},
+  year		= 2003,
+  keywords	= {computer science}
+}
