--- a/counterpoint.bib
+++ b/counterpoint.bib
@@ -1,58 +1,64 @@
 
-@Book{            bitsch.ea64:traite,
-  title         = {Traité de contrepoint},
-  publisher     = {Durand},
-  year          = {1964},
-  author        = {Marcel Bitsch and Noël Gallon},
-  address       = {Paris}
+@Book{		  bitsch.ea64:traite,
+  title		= {Traité de contrepoint},
+  publisher	= {Durand},
+  year		= {1964},
+  author	= {Marcel Bitsch and Noël Gallon},
+  address	= {Paris},
+  keywords	= {counterpoint}
 }
 
-@InCollection{    bloxam02:cantus,
-  author        = {M. Jennifer Bloxam},
-  title         = {Cantus Firmus},
-  booktitle     = {Grove Music},
-  publisher     = {Oxford University Press},
-  year          = {2002},
-  editor        = {Laura Williams Macy},
-  annote        = {Disponível em \url{http://www.grovemusic.com/}}
+@InCollection{	  bloxam02:cantus,
+  author	= {M. Jennifer Bloxam},
+  title		= {Cantus Firmus},
+  booktitle	= {Grove Music},
+  publisher	= {Oxford University Press},
+  year		= {2002},
+  editor	= {Laura Williams Macy},
+  annote	= {Disponível em \url{http://www.grovemusic.com/}},
+  keywords	= {counterpoint}
 }
 
-@Book{            carvalho06:contraponto,
-  title         = {Contraponto Modal: manual prático},
-  publisher     = {Evangraf},
-  year          = {2006},
-  author        = {Any Raquel Carvalho},
-  address       = {Porto Alegre},
-  edition       = {2. ed. rev. amp.}
+@Book{		  carvalho06:contraponto,
+  title		= {Contraponto Modal: manual prático},
+  publisher	= {Evangraf},
+  year		= {2006},
+  author	= {Any Raquel Carvalho},
+  address	= {Porto Alegre},
+  edition	= {2. ed. rev. amp.},
+  keywords	= {counterpoint}
 }
 
-@Book{            fux.ea71:study,
-  title         = {The study of counterpoint: from Johann Joseph Fux's Gradus
-                  ad parnassum},
-  publisher     = {W. W. Norton},
-  year          = {1971},
-  author        = {Johann Joseph Fux and Alfred Mann},
-  pages         = {xvi, 156},
-  address       = {New York},
-  note          = {translated and edited by Alfred Mann, with the
-                  collaboration of John Edmunds}
+@Book{		  fux.ea71:study,
+  title		= {The study of counterpoint: from Johann Joseph Fux's Gradus
+		  ad parnassum},
+  publisher	= {W. W. Norton},
+  year		= {1971},
+  author	= {Johann Joseph Fux and Alfred Mann},
+  pages		= {xvi, 156},
+  address	= {New York},
+  note		= {translated and edited by Alfred Mann, with the
+		  collaboration of John Edmunds},
+  keywords	= {counterpoint}
 }
 
-@Book{            piston70:counterpoint,
-  title         = {Counterpoint},
-  publisher     = {Victon Gollancz Ltd},
-  year          = {1970},
-  author        = {Walter Piston},
-  address       = {London},
-  file          = {piston70:counterpoint.pdf}
+@Book{		  piston70:counterpoint,
+  title		= {Counterpoint},
+  publisher	= {Victon Gollancz Ltd},
+  year		= {1970},
+  author	= {Walter Piston},
+  address	= {London},
+  file		= {piston70:counterpoint.pdf},
+  keywords	= {counterpoint}
 }
 
-@InCollection{    sachs.ea02:counterpoint,
-  author        = {Klaus-Jürgen Sachs and Carl Dahlhaus},
-  title         = {Counterpoint},
-  booktitle     = {Grove Music},
-  publisher     = {Oxford University Press},
-  year          = 2002,
-  editor        = {Laura Williams Macy},
-  annote        = {Disponível em \url{http://www.grovemusic.com/}}
+@InCollection{	  sachs.ea02:counterpoint,
+  author	= {Klaus-Jürgen Sachs and Carl Dahlhaus},
+  title		= {Counterpoint},
+  booktitle	= {Grove Music},
+  publisher	= {Oxford University Press},
+  year		= 2002,
+  editor	= {Laura Williams Macy},
+  annote	= {Disponível em \url{http://www.grovemusic.com/}},
+  keywords	= {counterpoint}
 }
