--- a/dictionary.bib
+++ b/dictionary.bib
@@ -1,19 +1,20 @@
 
-@Book{            houaiss.ea01:dicionario,
-  title         = {Dicionário Houaiss da língua portuguesa},
-  author        = {Antônio Houaiss and Mauro de Salles Villar and
-                  Francisco Manoel de Mello Franco},
-  year          = {2001},
-  publisher     = {Objetiva},
-  address       = {Rio de Janeiro}
+@Book{		  houaiss.ea01:dicionario,
+  title		= {Dicionário Houaiss da língua portuguesa},
+  author	= {Antônio Houaiss and Mauro de Salles Villar and Francisco
+		  Manoel de Mello Franco},
+  year		= {2001},
+  publisher	= {Objetiva},
+  address	= {Rio de Janeiro},
+  keywords	= {dictionary}
 }
 
-@Misc{webster09:algorithm,
-  key =           {Merrian Webster Online Dictionary},
-  title =     {Algorithm},
-  howpublished = {Merriam Webster Online Dictionary},
-  month =     {Junho},
-  year =      2009,
-  note =      {\url{http://www.merriam-webster.com/dictionary/algorithm}}
+@Misc{		  webster09:algorithm,
+  key		= {Merrian Webster Online Dictionary},
+  title		= {Algorithm},
+  howpublished	= {Merriam Webster Online Dictionary},
+  month		= {Junho},
+  year		= 2009,
+  note		= {\url{http://www.merriam-webster.com/dictionary/algorithm}},
+  keywords	= {dictionary}
 }
-
