--- a/dont-have.bib
+++ b/dont-have.bib
@@ -1,43 +1,46 @@
 
-@Article{         fix.ea89:important,
-  author        = {Evelyn Fix and Joseph L. Hodges},
-  title         = {An Important Contribution to Nonparametric Discriminant
-                  Analysis and Density Estimation: Commentary on Fix and
-                  Hodges (1951) },
-  journal       = {International Statistical Review},
-  volume        = 57,
-  number        = 3,
-  pages         = {233-238},
-  year          = 1989,
-                  
+@Article{	  fix.ea89:important,
+  author	= {Evelyn Fix and Joseph L. Hodges},
+  title		= {An Important Contribution to Nonparametric Discriminant
+		  Analysis and Density Estimation: Commentary on Fix and
+		  Hodges (1951) },
+  journal	= {International Statistical Review},
+  volume	= 57,
+  number	= 3,
+  pages		= {233-238},
+  year		= 1989,
+  keywords	= {dont have}
 }
 
-@Book{            gilovich.ea02:heuristics,
-  author        = {T. Gilovich and D. Griffin and D. Kahneman},
-  title         = {Heuristics and Biases: The Psychology of Intuitive
-                  Judgment},
-  publisher     = {Cambridge University Press, Cambrighe},
-  year          = {2002},
-  url           = "http://assets.cambridge.org/97805217/92608/sample/9780521792608ws.pdf"
-                  
+@Book{		  gilovich.ea02:heuristics,
+  author	= {T. Gilovich and D. Griffin and D. Kahneman},
+  title		= {Heuristics and Biases: The Psychology of Intuitive
+		  Judgment},
+  publisher	= {Cambridge University Press, Cambrighe},
+  year		= {2002},
+  url		= "http://assets.cambridge.org/97805217/92608/sample/9780521792608ws.pdf"
+		  ,
+  keywords	= {dont have}
 }
 
-@Article{         temperley96:algorithm,
-  author        = {Temperley, David},
-  title         = {An Algorithm for Harmonic Analysis},
-  journal       = {Music Perception},
-  year          = 1996,
-  volume        = 15,
-  number        = 1,
-  pages         = {31-68}
+@Article{	  temperley96:algorithm,
+  author	= {Temperley, David},
+  title		= {An Algorithm for Harmonic Analysis},
+  journal	= {Music Perception},
+  year		= 1996,
+  volume	= 15,
+  number	= 1,
+  pages		= {31-68},
+  keywords	= {dont have}
 }
 
-@Article{         white.ea95:superstitious,
-  author        = {Allan P. White and Wei Zhong Liu},
-  title         = {Superstitious learning and induction},
-  journal       = {Artificial Intelligence Review},
-  year          = 1995,
-  volume        = 9,
-  number        = 1,
-  url           = {http://www.springerlink.com/content/l764p6v0225v3mx6/}
+@Article{	  white.ea95:superstitious,
+  author	= {Allan P. White and Wei Zhong Liu},
+  title		= {Superstitious learning and induction},
+  journal	= {Artificial Intelligence Review},
+  year		= 1995,
+  volume	= 9,
+  number	= 1,
+  url		= {http://www.springerlink.com/content/l764p6v0225v3mx6/},
+  keywords	= {dont have}
 }
