--- a/genos.bib
+++ b/genos.bib
@@ -1,34 +1,51 @@
-@InProceedings{kroger08:musicologia,
-  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de
-  Cidra and Nathanael de Souza Ourives and Emerson Soares dos Anjos and Wallace Silva dos Santos},
-  title =        {Musicologia computacional aplicada à análise dos corais de Bach},
-  booktitle = {Anais do XVIII Congresso da ANPPOM},
-  year =      2008}
 
-@InProceedings{kroger08:rameau,
-  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
-  title =        {Rameau: A System for Automatic Harmonic Analysis},
-  booktitle = {Proceedings of the 2008 International Computer Music Conference},
-  pages         = {273-281},
-  year =      2008}
-
-@InProceedings{kroger.ea06:processo,
-  author = {Pedro Kröger and Marcos di Silva and Givaldo de Cidra},
-  title = 	 {O processo de desenvolvimento de uma codificação para definir estruturas musicais},
-  booktitle = {Anais do XVI Congresso da ANPPOM},
-  year = 	 2006}
-
-@Unpublished{passos08:effect,
-  author =       {Alexandre Passos and Pedro Kröger and Marcos Sampaio and Givaldo de Cidra},
-  title =        {The effect of incorporating enharmonic information
-                  on chord labeling algorithms},
-  year =      2008,
-  note =         {Unpublished paper available on request},
+@InProceedings{	  kroger08:musicologia,
+  author	= {Pedro Kröger and Alexandre Passos and Marcos Sampaio and
+		  Givaldo de Cidra and Nathanael de Souza Ourives and Emerson
+		  Soares dos Anjos and Wallace Silva dos Santos},
+  title		= {Musicologia computacional aplicada à análise dos corais
+		  de Bach},
+  booktitle	= {Anais do XVIII Congresso da ANPPOM},
+  year		= 2008,
+  keywords	= {genos}
 }
 
-@Unpublished{passos08:evaluation,
-  author =       {Alexandre Passos and Pedro Kröger and Marcos Sampaio and Givaldo de Cidra},
-  title =        {An evaluation of some algorithms for symbolic chord labeling},
-  note =         {Unpublished paper available on request},
-  year =      2008}
+@InProceedings{	  kroger08:rameau,
+  author	= {Pedro Kröger and Alexandre Passos and Marcos Sampaio and
+		  Givaldo de Cidra},
+  title		= {Rameau: A System for Automatic Harmonic Analysis},
+  booktitle	= {Proceedings of the 2008 International Computer Music
+		  Conference},
+  pages		= {273-281},
+  year		= 2008,
+  keywords	= {genos}
+}
 
+@InProceedings{	  kroger.ea06:processo,
+  author	= {Pedro Kröger and Marcos di Silva and Givaldo de Cidra},
+  title		= {O processo de desenvolvimento de uma codificação para
+		  definir estruturas musicais},
+  booktitle	= {Anais do XVI Congresso da ANPPOM},
+  year		= 2006,
+  keywords	= {genos}
+}
+
+@Unpublished{	  passos08:effect,
+  author	= {Alexandre Passos and Pedro Kröger and Marcos Sampaio and
+		  Givaldo de Cidra},
+  title		= {The effect of incorporating enharmonic information on
+		  chord labeling algorithms},
+  year		= 2008,
+  note		= {Unpublished paper available on request},
+  keywords	= {genos}
+}
+
+@Unpublished{	  passos08:evaluation,
+  author	= {Alexandre Passos and Pedro Kröger and Marcos Sampaio and
+		  Givaldo de Cidra},
+  title		= {An evaluation of some algorithms for symbolic chord
+		  labeling},
+  note		= {Unpublished paper available on request},
+  year		= 2008,
+  keywords	= {genos}
+}
