--- a/greek-music.bib
+++ b/greek-music.bib
@@ -1,227 +1,247 @@
-@Article{barbera84:octave,
-  author = 	 {Barbera, André},
-  title = 	 {Octave Species},
-  journal = 	 {Journal of Musicology},
-  year = 	 1984,
-  volume =	 3,
-  pages =	 {229--241}
+
+@Article{	  barbera84:octave,
+  author	= {Barbera, André},
+  title		= {Octave Species},
+  journal	= {Journal of Musicology},
+  year		= 1984,
+  volume	= 3,
+  pages		= {229--241},
+  keywords	= {greek music}
 }
 
-@Book{boethius89:fundamentals,
-  author =	 {Boethius, Anicius Manlius Torquatus Severinus},
-  note =	 {Traduzido por Calvin Bower},
-  title = 	 {The Fundamentals of Music},
-  publisher = 	 {Yale University Press},
-  year = 	 1989
+@Book{		  boethius89:fundamentals,
+  author	= {Boethius, Anicius Manlius Torquatus Severinus},
+  note		= {Traduzido por Calvin Bower},
+  title		= {The Fundamentals of Music},
+  publisher	= {Yale University Press},
+  year		= 1989,
+  keywords	= {greek music}
 }
 
-
-@InCollection{bower02:boethius,
-  author = 	 {Calvin Bower},
-  title = 	 {Boethius},
-  booktitle = 	 groveol,
-  publisher =	 {Macmillan Publishers},
-  year =	 2002,
-  editor =	 {Laura Macy},
-  note =	 {\url{www.grovemusic.com}}
+@InCollection{	  bower02:boethius,
+  author	= {Calvin Bower},
+  title		= {Boethius},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {greek music}
 }
 
-@Article{bower84:modes,
-  author = 	 {Bower, Calvin M.},
-  title = 	 {The Modes of Boethius},
-  journal = 	 {Journal of Musicology},
-  year = 	 1984,
-  volume =	 3,
-  pages =	 {252--63}
+@Article{	  bower84:modes,
+  author	= {Bower, Calvin M.},
+  title		= {The Modes of Boethius},
+  journal	= {Journal of Musicology},
+  year		= 1984,
+  volume	= 3,
+  pages		= {252--63},
+  keywords	= {greek music}
 }
 
-@InCollection{cleonides98:harmonic,
-  author = 	 {Cleonides},
-  title = 	 {Harmonic Introduction},
-  booktitle = 	 {Greek Views of Music},
-  publisher =	 {W.W. Norton \& Company},
-  year =	 1998,
-  editor =	 {Mathiesen, Thomas J.},
-  volume =	 1
+@InCollection{	  cleonides98:harmonic,
+  author	= {Cleonides},
+  title		= {Harmonic Introduction},
+  booktitle	= {Greek Views of Music},
+  publisher	= {W.W. Norton \& Company},
+  year		= 1998,
+  editor	= {Mathiesen, Thomas J.},
+  volume	= 1,
+  keywords	= {greek music}
 }
 
-@InCollection{cohen01:notes,
-  author = 	 {Cohen, David},
-  title = 	 {Notes, scales, and modes in the earlier Middle Ages},
-  booktitle = 	 {The Cambridge History of Western Music Theory},
-  publisher =	 {Cambridge University Press},
-  year =	 2001,
-  editor =	 {Thomas Christerisen},
-  address =	 {New York}
+@InCollection{	  cohen01:notes,
+  author	= {Cohen, David},
+  title		= {Notes, scales, and modes in the earlier Middle Ages},
+  booktitle	= {The Cambridge History of Western Music Theory},
+  publisher	= {Cambridge University Press},
+  year		= 2001,
+  editor	= {Thomas Christerisen},
+  address	= {New York},
+  keywords	= {greek music}
 }
 
-@Article{crocker63:pythagorean,
-  author = 	 {Crocker, Richard L.},
-  title = 	 {Pythagorean Mathematics and Music},
-  journal = 	 {Journal of Aesthetics and Art Criticism},
-  year = 	 1963,
-  volume =	 22,
-  number =	 2,
-  pages =	 {189--198},
-  month =	 {}
+@Article{	  crocker63:pythagorean,
+  author	= {Crocker, Richard L.},
+  title		= {Pythagorean Mathematics and Music},
+  journal	= {Journal of Aesthetics and Art Criticism},
+  year		= 1963,
+  volume	= 22,
+  number	= 2,
+  pages		= {189--198},
+  month		= {},
+  keywords	= {greek music}
 }
 
-@Article{crocker64:pythagorean,
-  author = 	 {Crocker, Richard L.},
-  title = 	 {Pythagorean Mathematics and Music},
-  journal = 	 {Journal of Aesthetics and Art Criticism},
-  year = 	 1964,
-  volume =	 22,
-  number =	 3,
-  pages =	 {325--335},
-  month =	 {}
+@Article{	  crocker64:pythagorean,
+  author	= {Crocker, Richard L.},
+  title		= {Pythagorean Mathematics and Music},
+  journal	= {Journal of Aesthetics and Art Criticism},
+  year		= 1964,
+  volume	= 22,
+  number	= 3,
+  pages		= {325--335},
+  month		= {},
+  keywords	= {greek music}
 }
 
-@InCollection{mathiesen02:greece,
-  author = 	 {Thomas J. Mathiesen},
-  Title = 	 {Greece, Ancient},
-  booktitle = 	 groveol,
-  publisher =	 {Macmillan Publishers},
-  year =	 2002,
-  editor =	 {Laura Macy},
-  note =	 {\url{www.grovemusic.com}}
+@InCollection{	  mathiesen02:greece,
+  author	= {Thomas J. Mathiesen},
+  title		= {Greece, Ancient},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {greek music}
 }
 
-
-@InCollection{barbera02:pythagoras,
-  author = 	 {André Barbera},
-  Title = 	 {Pythagoras},
-  booktitle = 	 groveol,
-  publisher =	 {Macmillan Publishers},
-  year =	 2002,
-  editor =	 {Laura Macy},
-  note =	 {\url{www.grovemusic.com}}
+@InCollection{	  barbera02:pythagoras,
+  author	= {André Barbera},
+  title		= {Pythagoras},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {greek music}
 }
 
-
-@InCollection{anderson02:plato,
-  author = 	 {Warren Anderson and Thomas J. Mathiesen},
-  title = 	 {Plato},
-  booktitle = 	 groveol,
-  publisher =	 {Macmillan Publishers},
-  year =	 2002,
-  editor =	 {Laura Macy},
-  note =	 {\url{www.grovemusic.com}}
+@InCollection{	  anderson02:plato,
+  author	= {Warren Anderson and Thomas J. Mathiesen},
+  title		= {Plato},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {greek music}
 }
 
-
-@InCollection{anderson02:aristotle,
-  author = 	 {Warren Anderson and Thomas J. Mathiesen},
-  title = 	 {Aristotle},
-  booktitle = 	 groveol,
-  publisher =	 {Macmillan Publishers},
-  year =	 2002,
-  editor =	 {Laura Macy},
-  note =	 {\url{www.grovemusic.com}}
+@InCollection{	  anderson02:aristotle,
+  author	= {Warren Anderson and Thomas J. Mathiesen},
+  title		= {Aristotle},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {greek music}
 }
 
-
-@Book{barker99:greek,
-  editor       = {Barker, Andrew},
-  title        = {Greek Musical Writings, II.  Harmonic and Acoustic Theory},
-  publisher    = {Cambridge University Press},
-  year         = 1999,
-  address      = {Cambridge}
+@Book{		  barker99:greek,
+  editor	= {Barker, Andrew},
+  title		= {Greek Musical Writings, II. Harmonic and Acoustic Theory},
+  publisher	= {Cambridge University Press},
+  year		= 1999,
+  address	= {Cambridge},
+  keywords	= {greek music}
 }
 
-@InCollection{belis02:aristoxenus,
-  author = 	 {Annie Bélis},
-  title = 	 {Aristoxenus},
-  booktitle = 	 groveol,
-  publisher =	 {Macmillan Publishers},
-  year =	 2002,
-  editor =	 {Laura Macy},
-  note =	 {\url{www.grovemusic.com}}
+@InCollection{	  belis02:aristoxenus,
+  author	= {Annie Bélis},
+  title		= {Aristoxenus},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {greek music}
 }
 
-@InCollection{crocker66:aristoxenus,
-  author = 	 {Crocker, Richard L.},
-  title = 	 {Aristoxenus and Greek Mathematics},
-  booktitle = 	 {Aspects of Medieval and Renaissance Music: A Birthday Offering to Gustave Reese},
-  pages =	 {96--110},
-  publisher =	 {W. W. Norton},
-  year =	 1966,
-  editor =	 {Jan LaRue},
-  address =	 {New York}
+@InCollection{	  crocker66:aristoxenus,
+  author	= {Crocker, Richard L.},
+  title		= {Aristoxenus and Greek Mathematics},
+  booktitle	= {Aspects of Medieval and Renaissance Music: A Birthday
+		  Offering to Gustave Reese},
+  pages		= {96--110},
+  publisher	= {W. W. Norton},
+  year		= 1966,
+  editor	= {Jan LaRue},
+  address	= {New York},
+  keywords	= {greek music}
 }
 
-
-@Article{crocker72:major,
-  author = 	 {Richard Crocker},
-  title = 	 {Hermann's Major Sixth},
-  journal = 	 {JAMS},
-  year = 	 1972,
-  volume =	 25,
-  pages =	 {19--37}
+@Article{	  crocker72:major,
+  author	= {Richard Crocker},
+  title		= {Hermann's Major Sixth},
+  journal	= {JAMS},
+  year		= 1972,
+  volume	= 25,
+  pages		= {19--37},
+  keywords	= {greek music}
 }
 
-@InCollection{lindley02:temperaments,
-  author = 	 {Mark Lindley},
-  title = 	 {Temperaments},
-  booktitle = 	 groveol,
-  publisher =	 {Macmillan Publishers},
-  year =	 2002,
-  editor =	 {Laura Macy},
-  note =	 {\url{www.grovemusic.com}}
+@InCollection{	  lindley02:temperaments,
+  author	= {Mark Lindley},
+  title		= {Temperaments},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {greek music}
 }
 
-@InCollection{mathiesen76:festival,
-  author       = {Mathiesen, Thomas J.},
-  editor       = {Burton L. Karson},
-  title        = {Festival Essays for Pauline Alderman},
-  chapter      = {Problems of Terminology in Ancient Greek Theory:  APMONÍA},
-  publisher    = {Brigham Young University Press},
-  year         = 1976,
-  address      = {Provo, Utah},
-  pages        = {3--17}
+@InCollection{	  mathiesen76:festival,
+  author	= {Mathiesen, Thomas J.},
+  editor	= {Burton L. Karson},
+  title		= {Festival Essays for Pauline Alderman},
+  chapter	= {Problems of Terminology in Ancient Greek Theory:
+		  APMONÍA},
+  publisher	= {Brigham Young University Press},
+  year		= 1976,
+  address	= {Provo, Utah},
+  pages		= {3--17},
+  keywords	= {greek music}
 }
 
-@Book{mathiesen99:lyre,
-  author       = {Mathiesen, Thomas J.},
-  title        = {Apollo's Lyre:  Greek Music and Music Theory in Antiquity and the Early Middle Ages},
-  publisher    = {Lincoln},
-  year         = 1999
+@Book{		  mathiesen99:lyre,
+  author	= {Mathiesen, Thomas J.},
+  title		= {Apollo's Lyre: Greek Music and Music Theory in Antiquity
+		  and the Early Middle Ages},
+  publisher	= {Lincoln},
+  year		= 1999,
+  keywords	= {greek music}
 }
 
-@InCollection{palisca02:theory,
-  author = 	 {Claude Palisca and Ian Bent},
-  title = 	 {Theory, theorists},
-  booktitle = 	 groveol,
-  publisher =	 {Macmillan Publishers},
-  year =	 2002,
-  editor =	 {Laura Macy},
-  note =	 {\url{www.grovemusic.com}}
+@InCollection{	  palisca02:theory,
+  author	= {Claude Palisca and Ian Bent},
+  title		= {Theory, theorists},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {greek music}
 }
 
-@InCollection{richter02:ptolemy,
-  author = 	 {Lukas Richter},
-  title = 	 {Ptolemy},
-  booktitle = 	 groveol,
-  publisher =	 {Macmillan Publishers},
-  year =	 2002,
-  editor =	 {Laura Macy},
-  note =	 {\url{www.grovemusic.com}}
+@InCollection{	  richter02:ptolemy,
+  author	= {Lukas Richter},
+  title		= {Ptolemy},
+  booktitle	= groveol,
+  publisher	= {Macmillan Publishers},
+  year		= 2002,
+  editor	= {Laura Macy},
+  note		= {\url{www.grovemusic.com}},
+  keywords	= {greek music}
 }
 
-@Article{solomon84:towards,
-  author = 	 {Solomon, Jon},
-  title = 	 {Towards a History of Tonoi},
-  journal = 	 {Journal of Musicology},
-  year = 	 1984,
-  volume =	 3,
-  pages =	 {242--251}
+@Article{	  solomon84:towards,
+  author	= {Solomon, Jon},
+  title		= {Towards a History of Tonoi},
+  journal	= {Journal of Musicology},
+  year		= 1984,
+  volume	= 3,
+  pages		= {242--251},
+  keywords	= {greek music}
 }
 
-@Book{west92:ancient,
-  author       = {M. L. West},
-  title        = {Ancient Greek Music},
-  publisher    = {Oxford University Press},
-  year         = 1992,
-  address      = {New York}
+@Book{		  west92:ancient,
+  author	= {M. L. West},
+  title		= {Ancient Greek Music},
+  publisher	= {Oxford University Press},
+  year		= 1992,
+  address	= {New York},
+  keywords	= {greek music}
 }
-
