--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -1,375 +1,410 @@
 
-@MastersThesis{   allan02:harmonising,
-  author        = {Moray Allan},
-  title         = {Harmonising Chorales in the Style of Johann Sebastian
-                  Bach},
-  school        = {School of Informatics, University of Edinburgh},
-  year          = 2002,
-  file          = {allan02-harmonizing.pdf}
+@MastersThesis{	  allan02:harmonising,
+  author	= {Moray Allan},
+  title		= {Harmonising Chorales in the Style of Johann Sebastian
+		  Bach},
+  school	= {School of Informatics, University of Edinburgh},
+  year		= 2002,
+  file		= {allan02-harmonizing.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@PhDThesis{       buteau03:topological,
-  author        = {Chantal Buteau},
-  title         = {A Topological Model of Motivic Structure and Analysis of
-                  Music: Theory and Operationalization},
-  school        = {Universität Zürich},
-  year          = 2003,
-  file          = {buteau03-topological.pdf}
+@PhDThesis{	  buteau03:topological,
+  author	= {Chantal Buteau},
+  title		= {A Topological Model of Motivic Structure and Analysis of
+		  Music: Theory and Operationalization},
+  school	= {Universität Zürich},
+  year		= 2003,
+  file		= {buteau03-topological.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@MastersThesis{   buteau98:motivic,
-  author        = {Chantal Buteau},
-  title         = {Motivic Topologies and their Meaning in the Motivic
-                  Analysis of Music},
-  school        = {Faculté Des Sciences Et De Génie Université Laval},
-  year          = 1998,
-  file          = {buteau98-motivic.pdf}
+@MastersThesis{	  buteau98:motivic,
+  author	= {Chantal Buteau},
+  title		= {Motivic Topologies and their Meaning in the Motivic
+		  Analysis of Music},
+  school	= {Faculté Des Sciences Et De Génie Université Laval},
+  year		= 1998,
+  file		= {buteau98-motivic.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@Article{         byrd.ea02:problems,
-  author        = {Donald Byrd and Tim Crawford},
-  title         = {Problems of music information retrieval in the real
-                  world},
-  journal       = {Information Processing \& Management},
-  year          = 2002,
-  volume        = 38,
-  number        = 2,
-  pages         = {249-272},
-  file          = {byrd02:problems.pdf}
+@Article{	  byrd.ea02:problems,
+  author	= {Donald Byrd and Tim Crawford},
+  title		= {Problems of music information retrieval in the real
+		  world},
+  journal	= {Information Processing \& Management},
+  year		= 2002,
+  volume	= 38,
+  number	= 2,
+  pages		= {249-272},
+  file		= {byrd02:problems.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InCollection{    conklin02:representation,
-  author        = {D. Conklin},
-  title         = {Representation and discovery of vertical patterns in
-                  music},
-  booktitle     = {Music and Artificial Intelligence: Lecture Note in
-                  Artificial Intelligence},
-  pages         = {32-42},
-  publisher     = {Springer-Verlag},
-  year          = 2002,
-  editor        = {C. Anagnostopoulou and M. Ferrand and A. Smaill},
-  file          = {vertical-patterns.pdf}
+@InCollection{	  conklin02:representation,
+  author	= {D. Conklin},
+  title		= {Representation and discovery of vertical patterns in
+		  music},
+  booktitle	= {Music and Artificial Intelligence: Lecture Note in
+		  Artificial Intelligence},
+  pages		= {32-42},
+  publisher	= {Springer-Verlag},
+  year		= 2002,
+  editor	= {C. Anagnostopoulou and M. Ferrand and A. Smaill},
+  file		= {vertical-patterns.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@Article{         conklin.ea95:multiple,
-  author        = "D. Conklin and I. Witten",
-  title         = "Multiple viewpoint systems for music prediction",
-  journal       = {Journal of New Music Research},
-  year          = 1995,
-  volume        = 24,
-  pages         = {51--73},
-  file          = {music-prediction.pdf}
+@Article{	  conklin.ea95:multiple,
+  author	= "D. Conklin and I. Witten",
+  title		= "Multiple viewpoint systems for music prediction",
+  journal	= {Journal of New Music Research},
+  year		= 1995,
+  volume	= 24,
+  pages		= {51--73},
+  file		= {music-prediction.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   cunha.ea99:intelligent,
-  author        = {Cunha, U. and Ramalho, G.},
-  title         = {An Intelligent Hybrid Model for Chord Prediction},
-  booktitle     = {Organised Sound},
-  pages         = {115-19},
-  year          = 1999,
-  volume        = 4,
-  number        = 2,
-  publisher     = {Cambridge University Press},
-  file          = {cunha99-intelligent.pdf}
+@InProceedings{	  cunha.ea99:intelligent,
+  author	= {Cunha, U. and Ramalho, G.},
+  title		= {An Intelligent Hybrid Model for Chord Prediction},
+  booktitle	= {Organised Sound},
+  pages		= {115-19},
+  year		= 1999,
+  volume	= 4,
+  number	= 2,
+  publisher	= {Cambridge University Press},
+  file		= {cunha99-intelligent.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@TechReport{      jorgensen.ea02:harmonisation,
-  author        = {Martin Elmer Jørgensen and Søren Tjagvad Madsen},
-  title         = {Harmonisation of Bach chorales},
-  institution   = {University of Aarhus},
-  year          = 2002,
-  file          = {harmreport.pdf}
+@TechReport{	  jorgensen.ea02:harmonisation,
+  author	= {Martin Elmer Jørgensen and Søren Tjagvad Madsen},
+  title		= {Harmonisation of Bach chorales},
+  institution	= {University of Aarhus},
+  year		= 2002,
+  file		= {harmreport.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   kroger.ea06:processo,
-  author        = {Pedro Kröger and Marcos Sampaio and {Givaldo de} Cidra},
-  title         = {O processo de desenvolvimento de uma codificação para
-                  definir estruturas musicais},
-  booktitle     = {Anais do XVI Congresso da ANPPOM},
-  address       = {Brasília},
-  year          = 2006
+@InProceedings{	  kroger.ea06:processo,
+  author	= {Pedro Kröger and Marcos Sampaio and {Givaldo de} Cidra},
+  title		= {O processo de desenvolvimento de uma codificação para
+		  definir estruturas musicais},
+  booktitle	= {Anais do XVI Congresso da ANPPOM},
+  address	= {Brasília},
+  year		= 2006,
+  keywords	= {harmonic analysis}
 }
 
-@InCollection{    maxwell92:expert,
-  author        = {Maxwell, H. John},
-  title         = {An Expert System for Harmonizing Analysis of Tonal Music},
-  booktitle     = {Understanding Music with AI: Perspectives on Music
-                  Cognition},
-  pages         = {335-353},
-  publisher     = {AAAI Press},
-  year          = 1992,
-  editor        = {K. Ebcioglu and O. Laske and M. Balaban}
+@InCollection{	  maxwell92:expert,
+  author	= {Maxwell, H. John},
+  title		= {An Expert System for Harmonizing Analysis of Tonal Music},
+  booktitle	= {Understanding Music with AI: Perspectives on Music
+		  Cognition},
+  pages		= {335-353},
+  publisher	= {AAAI Press},
+  year		= 1992,
+  editor	= {K. Ebcioglu and O. Laske and M. Balaban},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   mouton.ea95:numeric,
-  author        = {Mouton, Rémy and Pachet, François},
-  title         = {Numeric vs symbolic controversy in automatic analysis of
-                  tonal music},
-  booktitle     = {IJCAI'95 Workshop on Artificial Intelligence and Music},
-  pages         = {32-40},
-  year          = 1995,
-  file          = {symbolic-vs-numeric.pdf}
+@InProceedings{	  mouton.ea95:numeric,
+  author	= {Mouton, Rémy and Pachet, François},
+  title		= {Numeric vs symbolic controversy in automatic analysis of
+		  tonal music},
+  booktitle	= {IJCAI'95 Workshop on Artificial Intelligence and Music},
+  pages		= {32-40},
+  year		= 1995,
+  file		= {symbolic-vs-numeric.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InCollection{    pachet00:computer,
-  author        = {François Pachet},
-  title         = {Computer Analysis of Jazz Chord Sequence: Is Solar a
-                  Blues?},
-  booktitle     = {Readings in Music and Artificial Intelligence},
-  publisher     = {Harwood Academic Publishers},
-  year          = 2000,
-  pages         = {85-113},
-  file          = {pachet00:computer.pdf}
+@InCollection{	  pachet00:computer,
+  author	= {François Pachet},
+  title		= {Computer Analysis of Jazz Chord Sequence: Is Solar a
+		  Blues?},
+  booktitle	= {Readings in Music and Artificial Intelligence},
+  publisher	= {Harwood Academic Publishers},
+  year		= 2000,
+  pages		= {85-113},
+  file		= {pachet00:computer.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   pachet94:muses,
-  author        = "François Pachet",
-  title         = "The {MusES} System: An Environment for Experimenting with
-                  Knowledge Representation Techniques in Tonal Harmony",
-  booktitle     = "Proceedings of the 1st Brazilian Symposium on Computer
-                  Music, Caxambu, Minas Gerais, Brazil",
-  pages         = "195--201",
-  year          = 1994,
-  url           = "citeseer.ist.psu.edu/148999.html",
-  file          = {the-muses-system-an.pdf}
+@InProceedings{	  pachet94:muses,
+  author	= "François Pachet",
+  title		= "The {MusES} System: An Environment for Experimenting with
+		  Knowledge Representation Techniques in Tonal Harmony",
+  booktitle	= "Proceedings of the 1st Brazilian Symposium on Computer
+		  Music, Caxambu, Minas Gerais, Brazil",
+  pages		= "195--201",
+  year		= 1994,
+  url		= "citeseer.ist.psu.edu/148999.html",
+  file		= {the-muses-system-an.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@Article{         pachet.ea96:representing,
-  author        = "François Pachet and Geber Ramalho and Jean Carrive and
-                  Guillaume Comic",
-  title         = "Representing Temporal Musical Objects and Reasoning in the
-                  {MusES} System",
-  journal       = "Journal of New Music Research",
-  volume        = 5,
-  number        = 3,
-  pages         = "252--275",
-  year          = 1996,
-  url           = "citeseer.ist.psu.edu/pachet95representing.html",
-  file          = {pachet95representing.pdf}
+@Article{	  pachet.ea96:representing,
+  author	= "François Pachet and Geber Ramalho and Jean Carrive and
+		  Guillaume Comic",
+  title		= "Representing Temporal Musical Objects and Reasoning in the
+		  {MusES} System",
+  journal	= "Journal of New Music Research",
+  volume	= 5,
+  number	= 3,
+  pages		= "252--275",
+  year		= 1996,
+  url		= "citeseer.ist.psu.edu/pachet95representing.html",
+  file		= {pachet95representing.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   paiement.ea05:probabilistic,
-  author        = {Jean-Francois Paiement and Douglas Eck and Samy Bengio},
-  title         = {A Probabilistic Model for Chord Progressions},
-  booktitle     = {Proceedings of ISMIR 2005},
-  year          = 2005,
-  file          = {a-probabilistic-model-for.pdf}
+@InProceedings{	  paiement.ea05:probabilistic,
+  author	= {Jean-Francois Paiement and Douglas Eck and Samy Bengio},
+  title		= {A Probabilistic Model for Chord Progressions},
+  booktitle	= {Proceedings of ISMIR 2005},
+  year		= 2005,
+  file		= {a-probabilistic-model-for.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   pardo.ea00:automated,
-  author        = {Bryan Pardo and William P. Birmingham},
-  title         = {Automated Partitioning of Tonal Music},
-  booktitle     = {Proceedings of the 13th International FLAIRS Conference},
-  year          = 2000,
-  file          = {pardo-birmingham-flairs00.pdf}
+@InProceedings{	  pardo.ea00:automated,
+  author	= {Bryan Pardo and William P. Birmingham},
+  title		= {Automated Partitioning of Tonal Music},
+  booktitle	= {Proceedings of the 13th International FLAIRS Conference},
+  year		= 2000,
+  file		= {pardo-birmingham-flairs00.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@TechReport{      pardo.ea99:automated,
-  author        = "Bryan Pardo and William P. Birmingham",
-  title         = "Automated Partitioning of Tonal Music",
-  institution   = {Electrical Engineering and Computer Science Department,
-                  University of Michigan},
-  year          = 1999,
-  file          = {pardo99automated.pdf}
+@TechReport{	  pardo.ea99:automated,
+  author	= "Bryan Pardo and William P. Birmingham",
+  title		= "Automated Partitioning of Tonal Music",
+  institution	= {Electrical Engineering and Computer Science Department,
+		  University of Michigan},
+  year		= 1999,
+  file		= {pardo99automated.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@Article{         pardo.ea02:algorithms,
-  author        = {Pardo, Bryan and Birmingham, William P.},
-  title         = {Algorithms for chordal analysis},
-  journal       = {Computer Music Journal},
-  year          = 2002,
-  volume        = 26,
-  number        = 2,
-  pages         = {27-49},
-  file          = {pardo02-algorithms.pdf}
+@Article{	  pardo.ea02:algorithms,
+  author	= {Pardo, Bryan and Birmingham, William P.},
+  title		= {Algorithms for chordal analysis},
+  journal	= {Computer Music Journal},
+  year		= 2002,
+  volume	= 26,
+  number	= 2,
+  pages		= {27-49},
+  file		= {pardo02-algorithms.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   phon-amnuaisuk.ea99:four-part,
-  author        = "Somnuk Phon-Amnuaisuk and Geraint A. Wiggins",
-  title         = "The Four-Part Harmonisation Problem: A comparison between
-                  Genetic Algorithms",
-  booktitle     = {Proceedings of the AISB'99 Symposium on Musical
-                  Creativity},
-  year          = 1999,
-  file          = {the-four-part-harmonisation.pdf}
+@InProceedings{	  phon-amnuaisuk.ea99:four-part,
+  author	= "Somnuk Phon-Amnuaisuk and Geraint A. Wiggins",
+  title		= "The Four-Part Harmonisation Problem: A comparison between
+		  Genetic Algorithms",
+  booktitle	= {Proceedings of the AISB'99 Symposium on Musical
+		  Creativity},
+  year		= 1999,
+  file		= {the-four-part-harmonisation.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@PhDThesis{       pickens04:harmonic,
-  author        = {Jeremy Pickens},
-  title         = {Harmonic Modeling For Polyphonic Music Retrieval},
-  school        = {University of Massachusetts Amherst},
-  year          = 2004,
-  file          = {pickens04harmonic.pdf}
+@PhDThesis{	  pickens04:harmonic,
+  author	= {Jeremy Pickens},
+  title		= {Harmonic Modeling For Polyphonic Music Retrieval},
+  school	= {University of Massachusetts Amherst},
+  year		= 2004,
+  file		= {pickens04harmonic.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   pickens.ea02:harmonic,
-  author        = {Jeremy Pickens and Tim Crawford},
-  title         = {Harmonic models for polyphonic music retrieval},
-  booktitle     = {CIKM '02: Proceedings of the eleventh international
-                  conference on Information and knowledge management},
-  year          = 2002,
-  isbn          = {1-58113-492-4},
-  pages         = {430--437},
-  location      = {McLean, Virginia, USA},
-  publisher     = {ACM Press},
-  address       = {New York, NY, USA},
-  file          = {pickens02:harmonic}
+@InProceedings{	  pickens.ea02:harmonic,
+  author	= {Jeremy Pickens and Tim Crawford},
+  title		= {Harmonic models for polyphonic music retrieval},
+  booktitle	= {CIKM '02: Proceedings of the eleventh international
+		  conference on Information and knowledge management},
+  year		= 2002,
+  isbn		= {1-58113-492-4},
+  pages		= {430--437},
+  location	= {McLean, Virginia, USA},
+  publisher	= {ACM Press},
+  address	= {New York, NY, USA},
+  file		= {pickens02:harmonic},
+  keywords	= {harmonic analysis}
 }
 
-@Article{         prather96:harmonic,
-  author        = {R. E. Prather},
-  title         = {Harmonic analysis from the computer representation of a
-                  musical score},
-  journal       = {Commun. ACM},
-  volume        = 39,
-  number        = 12,
-  year          = 1996,
-  publisher     = {ACM Press},
-  address       = {New York, NY, USA},
-  file          = {a239-prather.pdf}
+@Article{	  prather96:harmonic,
+  author	= {R. E. Prather},
+  title		= {Harmonic analysis from the computer representation of a
+		  musical score},
+  journal	= {Commun. ACM},
+  volume	= 39,
+  number	= 12,
+  year		= 1996,
+  publisher	= {ACM Press},
+  address	= {New York, NY, USA},
+  file		= {a239-prather.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   rothgeb79:simulating,
-  author        = {John Rothgeb},
-  title         = {Simulating musical skills by digital computer},
-  booktitle     = {ACM 79: Proceedings of the 1979 annual conference},
-  year          = 1979,
-  isbn          = {0-89791-008-7},
-  pages         = {121--125},
-  publisher     = {ACM Press},
-  address       = {New York, NY},
-  file          = {rothgeb79:simulating.pdf}
+@InProceedings{	  rothgeb79:simulating,
+  author	= {John Rothgeb},
+  title		= {Simulating musical skills by digital computer},
+  booktitle	= {ACM 79: Proceedings of the 1979 annual conference},
+  year		= 1979,
+  isbn		= {0-89791-008-7},
+  pages		= {121--125},
+  publisher	= {ACM Press},
+  address	= {New York, NY},
+  file		= {rothgeb79:simulating.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@Article{         sapp05:visual,
-  author        = {Craig Stuart Sapp},
-  title         = {Visual hierarchical key analysis},
-  journal       = {Comput. Entertain.},
-  volume        = 3,
-  number        = 4,
-  year          = 2005,
-  issn          = {1544-3574},
-  pages         = {1--19},
-  publisher     = {ACM Press},
-  address       = {New York, NY, USA},
-  file          = {sapp05:visual.pdf}
+@Article{	  sapp05:visual,
+  author	= {Craig Stuart Sapp},
+  title		= {Visual hierarchical key analysis},
+  journal	= {Comput. Entertain.},
+  volume	= 3,
+  number	= 4,
+  year		= 2005,
+  issn		= {1544-3574},
+  pages		= {1--19},
+  publisher	= {ACM Press},
+  address	= {New York, NY, USA},
+  file		= {sapp05:visual.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   scholz05:funchal,
-  author        = {Scholz, Ricardo And Dantas, Vitor And Ramalho, Geber L.},
-  title         = {Funchal: a System for Automatic Functional Harmonic
-                  Analysis},
-  booktitle     = {Proceedings of the 10th Brazilian Symposium on Computer
-                  Music},
-  pages         = {287--290},
-  year          = 2005
+@InProceedings{	  scholz05:funchal,
+  author	= {Scholz, Ricardo And Dantas, Vitor And Ramalho, Geber L.},
+  title		= {Funchal: a System for Automatic Functional Harmonic
+		  Analysis},
+  booktitle	= {Proceedings of the 10th Brazilian Symposium on Computer
+		  Music},
+  pages		= {287--290},
+  year		= 2005,
+  keywords	= {harmonic analysis}
 }
 
-@Misc{            sleator.ea03:melisma,
-  author        = {Daniel Sleator and David Temperley},
-  title         = {The Melisma Music Analyzer},
-  howpublished  = {Available at \url{www.link.cs.cmu.edu/music-analysis/}},
-  year          = 2003
+@Misc{		  sleator.ea03:melisma,
+  author	= {Daniel Sleator and David Temperley},
+  title		= {The Melisma Music Analyzer},
+  howpublished	= {Available at \url{www.link.cs.cmu.edu/music-analysis/}},
+  year		= 2003,
+  keywords	= {harmonic analysis}
 }
 
-@Article{         taube99:automatic,
-  author        = {Heinrich Taube},
-  title         = {Automatic Tonal Analysis: Toward the Implementation of a
-                  Music Theory Workbench},
-  journal       = {Computer Music Journal},
-  volume        = {23},
-  number        = {4},
-  year          = {1999},
-  issn          = {0148-9267},
-  pages         = {18--32},
-  publisher     = {MIT Press},
-  address       = {Cambridge, MA, USA}
+@Article{	  taube99:automatic,
+  author	= {Heinrich Taube},
+  title		= {Automatic Tonal Analysis: Toward the Implementation of a
+		  Music Theory Workbench},
+  journal	= {Computer Music Journal},
+  volume	= {23},
+  number	= {4},
+  year		= {1999},
+  issn		= {0148-9267},
+  pages		= {18--32},
+  publisher	= {MIT Press},
+  address	= {Cambridge, MA, USA},
+  keywords	= {harmonic analysis}
 }
 
-@Article{         temperley04:bayesian,
-  author        = {David Temperley},
-  title         = {Bayesian Models of Musical Structure and Cognition},
-  journal       = {Musicae Scientiae},
-  year          = 2004,
-  volume        = 8,
-  number        = 2,
-  pages         = {175-205},
-  file          = {temperley04:bayesian.pdf}
+@Article{	  temperley04:bayesian,
+  author	= {David Temperley},
+  title		= {Bayesian Models of Musical Structure and Cognition},
+  journal	= {Musicae Scientiae},
+  year		= 2004,
+  volume	= 8,
+  number	= 2,
+  pages		= {175-205},
+  file		= {temperley04:bayesian.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@Article{         temperley.ea99:modeling,
-  author        = {David Temperley and Daniel Sleator},
-  title         = {Modeling meter and harmony: a preference-rule approach},
-  journal       = {Computer Music Journal},
-  year          = 1999,
-  file          = {music-modeling.pdf},
-  volume        = 23,
-  number        = 1,
-  pages         = {10--27}
+@Article{	  temperley.ea99:modeling,
+  author	= {David Temperley and Daniel Sleator},
+  title		= {Modeling meter and harmony: a preference-rule approach},
+  journal	= {Computer Music Journal},
+  year		= 1999,
+  file		= {music-modeling.pdf},
+  volume	= 23,
+  number	= 1,
+  pages		= {10--27},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   thom95:predicting,
-  author        = "Belinda Thom",
-  title         = "Predicting Chordal Transitions In Jazz: The Good, the Bad,
-                  and the Ugly",
-  booktitle     = {Proceedings of the IJCAI-95 International Workshop on
-                  Artificial Intelligence and Music},
-  year          = 1995
+@InProceedings{	  thom95:predicting,
+  author	= "Belinda Thom",
+  title		= "Predicting Chordal Transitions In Jazz: The Good, the Bad,
+		  and the Ugly",
+  booktitle	= {Proceedings of the IJCAI-95 International Workshop on
+		  Artificial Intelligence and Music},
+  year		= 1995,
+  keywords	= {harmonic analysis}
 }
 
-@MastersThesis{   tsui02:harmonic,
-  author        = {Wan Shun Vincent Tsui},
-  title         = {Harmonic Analysis Using Neural Networks},
-  school        = {University of Toronto},
-  year          = 2002,
-  file          = {Tsui_MASc.pdf}
+@MastersThesis{	  tsui02:harmonic,
+  author	= {Wan Shun Vincent Tsui},
+  title		= {Harmonic Analysis Using Neural Networks},
+  school	= {University of Toronto},
+  year		= 2002,
+  file		= {Tsui_MASc.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   ulrich77:analysis,
-  author        = {John Wade Ulrich},
-  title         = {The Analysis and Synthesis of Jazz by Computer},
-  year          = 1977,
-  booktitle     = {Proc. of the 5th IJCAI},
-  address       = "Cambridge, MA",
-  pages         = {865-872},
-  keywords      = {}
+@InProceedings{	  ulrich77:analysis,
+  author	= {John Wade Ulrich},
+  title		= {The Analysis and Synthesis of Jazz by Computer},
+  year		= 1977,
+  booktitle	= {Proc. of the 5th IJCAI},
+  address	= "Cambridge, MA",
+  pages		= {865-872},
+  keywords	= {harmonic analysis}
 }
 
-@InProceedings{   wang.ea97:generating,
-  author        = {Jeng-Feng Wang and Tsai-Yen Li},
-  title         = {Generating Guitar Scores from a MIDI Source},
-  booktitle     = {Proceedings of 1997 International Symposium on Multimedia
-                  Information Processing},
-  year          = 1997,
-  file          = {generating-guitar-scores-from.pdf}
+@InProceedings{	  wang.ea97:generating,
+  author	= {Jeng-Feng Wang and Tsai-Yen Li},
+  title		= {Generating Guitar Scores from a MIDI Source},
+  booktitle	= {Proceedings of 1997 International Symposium on Multimedia
+		  Information Processing},
+  year		= 1997,
+  file		= {generating-guitar-scores-from.pdf},
+  keywords	= {harmonic analysis}
 }
 
-@Article{         winograd68:linguistics,
-  author        = {Terry Winograd},
-  title         = {Linguistics and the computer analysis of tonal harmony},
-  journal       = {The Journal of Music Theory},
-  year          = {1968},
-  volume        = 12,
-  pages         = {2--49}
+@Article{	  winograd68:linguistics,
+  author	= {Terry Winograd},
+  title		= {Linguistics and the computer analysis of tonal harmony},
+  journal	= {The Journal of Music Theory},
+  year		= {1968},
+  volume	= 12,
+  pages		= {2--49},
+  keywords	= {harmonic analysis}
 }
 
-@article{conklin06:melodic,
- author = {Darrell Conklin},
- title = {Melodic analysis with segment classes},
- journal = {Machine Learning},
- volume = {65},
- number = {2-3},
- year = {2006},
- issn = {0885-6125},
- pages = {349--360},
- doi = {http://dx.doi.org/10.1007/s10994-006-8712-x},
- publisher = {Kluwer Academic Publishers},
- address = {Hingham, MA, USA},
- }
+@Article{	  conklin06:melodic,
+  author	= {Darrell Conklin},
+  title		= {Melodic analysis with segment classes},
+  journal	= {Machine Learning},
+  volume	= {65},
+  number	= {2-3},
+  year		= {2006},
+  issn		= {0885-6125},
+  pages		= {349--360},
+  doi		= {http://dx.doi.org/10.1007/s10994-006-8712-x},
+  publisher	= {Kluwer Academic Publishers},
+  address	= {Hingham, MA, USA},
+  keywords	= {harmonic analysis}
+}
 
-@book{schoenberg83:theory,
-  title={{Theory of Harmony}},
-  author={Schoenberg, A.},
-  year=1983,
-  publisher={University of California Press}
+@Book{		  schoenberg83:theory,
+  title		= {{Theory of Harmony}},
+  author	= {Schoenberg, A.},
+  year		= 1983,
+  publisher	= {University of California Press},
+  keywords	= {harmonic analysis}
 }
