--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -1,149 +1,165 @@
 
-@Article{         agawu04:how,
-  author        = {Kofi Agawu},
-  title         = {How We Got Out of Analysis, and How to Get Back},
-  journal       = {Music Analysis},
-  year          = 2004,
-  volume        = 23,
-  number        = {2--3},
-  pages         = {267--286},
-  doi           = {10.1111/j.0262-5245.2004.00204.x},
-  file          = {agawu04:how.pdf}
+@Article{	  agawu04:how,
+  author	= {Kofi Agawu},
+  title		= {How We Got Out of Analysis, and How to Get Back},
+  journal	= {Music Analysis},
+  year		= 2004,
+  volume	= 23,
+  number	= {2--3},
+  pages		= {267--286},
+  doi		= {10.1111/j.0262-5245.2004.00204.x},
+  file		= {agawu04:how.pdf},
+  keywords	= {music analysis}
 }
 
-@Book{antokoletz90:music,
-  author        = {Elliott Antokoletz},
-  title         = {The Music of Béla Bartók: A Study of Tonality and Progression in Twentieth-Century Music},
-  publisher     = {University of California Press},
-  year          = 1990,
-  address       = {Berkeley}
+@Book{		  antokoletz90:music,
+  author	= {Elliott Antokoletz},
+  title		= {The Music of Béla Bartók: A Study of Tonality and
+		  Progression in Twentieth-Century Music},
+  publisher	= {University of California Press},
+  year		= 1990,
+  address	= {Berkeley},
+  keywords	= {music analysis}
 }
 
-@Article{honing04:comeback,
-  author =       {Henkjan Honing},
-  title =        {The comeback of systematic musicology: new empiricism and the cognitive revolution},
-  journal =      {Dutch Journal of Music Theory},
-  year =         2004,
-  volume =    9,
-  number =    3,
-  pages =     {241-244}}
-
-
-
-@InProceedings{coutinho05:conputational,
-  author =       {E. Gimenes Coutinho},
-  title =        {Computational Musicology: An Artificial Life Approach},
-  booktitle = {Proceedings of the 2nd Portuguese Workshop on Artificial Life and Evolutionary Algorithms Workshop},
-  pages =     {85-93},
-  year =      {2005},
+@Article{	  honing04:comeback,
+  author	= {Henkjan Honing},
+  title		= {The comeback of systematic musicology: new empiricism and
+		  the cognitive revolution},
+  journal	= {Dutch Journal of Music Theory},
+  year		= 2004,
+  volume	= 9,
+  number	= 3,
+  pages		= {241-244},
+  keywords	= {music analysis}
 }
 
-@InProceedings{hartmann07:interactive,
-  author = {Knut Hartmann and Daniel B{\"u}chner and Axel Berndt and Andreas
-	N{\"u}rnberger and Carsten Lange},
-  title = {Interactive data mining and machine learning techniques for musicology},
-  booktitle = {3rd Conference on Interdisciplinary Musicology (CIM07)},
-  year = {2007},
-  address = {Tallinn, Estonia},
-  month = {15.-19. August},
-  owner = {schumann},
-  timestamp = {2007.10.25}
+@InProceedings{	  coutinho05:conputational,
+  author	= {E. Gimenes Coutinho},
+  title		= {Computational Musicology: An Artificial Life Approach},
+  booktitle	= {Proceedings of the 2nd Portuguese Workshop on Artificial
+		  Life and Evolutionary Algorithms Workshop},
+  pages		= {85-93},
+  year		= {2005},
+  keywords	= {music analysis}
 }
 
-
-
-@InProceedings{kranenburg04:_music_style_recog_quant_approac,
-  author =       {Kranenburg, P. van, E. Backer},
-  title =        {Musical style recognition - a
-quantitative approach},
-  booktitle = {Proceedings of the Conference on Interdisciplinary Musicology},
-  pages =     {15-18},
-  year =      2004,
-  editor =    {R. Parncutt, A. Kessler and F. Zimmer},
-  month =     {April}}
-
-@Book{            bent.ea87:analysis,
-  title         = {Analysis},
-  publisher     = {Norton},
-  year          = {1987},
-  author        = {Bent, Ian and Drabkin, William},
-  pages         = {viii, 184},
-  address       = {New York},
-  isbn          = {0393024474}
+@InProceedings{	  hartmann07:interactive,
+  author	= {Knut Hartmann and Daniel B{\"u}chner and Axel Berndt and
+		  Andreas N{\"u}rnberger and Carsten Lange},
+  title		= {Interactive data mining and machine learning techniques
+		  for musicology},
+  booktitle	= {3rd Conference on Interdisciplinary Musicology (CIM07)},
+  year		= {2007},
+  address	= {Tallinn, Estonia},
+  month		= {15.-19. August},
+  owner		= {schumann},
+  timestamp	= {2007.10.25},
+  keywords	= {music analysis}
 }
 
-@Book{            cook87:guide,
-  title         = {A guide to musical analysis},
-  publisher     = {J.M.Dent},
-  year          = {1987},
-  author        = {Cook, Nicholas},
-  pages         = {376},
-  address       = {London},
-  cdd           = {781 C771},
-  isbn          = {0460126024}
+@InProceedings{	  kranenburg04:_music_style_recog_quant_approac,
+  author	= {Kranenburg, P. van, E. Backer},
+  title		= {Musical style recognition - a quantitative approach},
+  booktitle	= {Proceedings of the Conference on Interdisciplinary
+		  Musicology},
+  pages		= {15-18},
+  year		= 2004,
+  editor	= {R. Parncutt, A. Kessler and F. Zimmer},
+  month		= {April},
+  keywords	= {music analysis}
 }
 
-@InCollection{    cook87:techniques,
-  author        = {Cook, Nicholas},
-  title         = {Techniques of Comparative Analysis},
-  booktitle     = {A guide to musical analysis},
-  publisher     = {J.M.Dent},
-  year          = {1987},
-  pages         = {183--214},
-  address       = {London},
-  cdd           = {781 C771},
-  isbn          = {460126024}
+@Book{		  bent.ea87:analysis,
+  title		= {Analysis},
+  publisher	= {Norton},
+  year		= {1987},
+  author	= {Bent, Ian and Drabkin, William},
+  pages		= {viii, 184},
+  address	= {New York},
+  isbn		= {0393024474},
+  keywords	= {music analysis}
 }
 
-@Book{            dudeque05:music,
-  title         = {Music Theory and Analysis in the Writings of Arnold
-                  Schoenberg (1874-1951)},
-  publisher     = {Ashgate},
-  year          = {2005},
-  author        = {Norton Dudeque},
-  address       = {Aldershot}
+@Book{		  cook87:guide,
+  title		= {A guide to musical analysis},
+  publisher	= {J.M.Dent},
+  year		= {1987},
+  author	= {Cook, Nicholas},
+  pages		= {376},
+  address	= {London},
+  cdd		= {781 C771},
+  isbn		= {0460126024},
+  keywords	= {music analysis}
 }
 
-@Book{            epstein79:beyond,
-  author        = {David Epstein},
-  title         = {Beyond Orpheus: studies in musical structure},
-  publisher     = {MIT Press},
-  year          = 1979,
-  address       = {Cambridge, Mass}
+@InCollection{	  cook87:techniques,
+  author	= {Cook, Nicholas},
+  title		= {Techniques of Comparative Analysis},
+  booktitle	= {A guide to musical analysis},
+  publisher	= {J.M.Dent},
+  year		= {1987},
+  pages		= {183--214},
+  address	= {London},
+  cdd		= {781 C771},
+  isbn		= {460126024},
+  keywords	= {music analysis}
 }
 
-@Book{            howat83:debussy,
-  title         = {Debussy in Proportion: A musical analysis},
-  publisher     = {Cambridge University Press},
-  year          = {1983},
-  author        = {Roy Howat},
-  address       = {Cambridge}
+@Book{		  dudeque05:music,
+  title		= {Music Theory and Analysis in the Writings of Arnold
+		  Schoenberg (1874-1951)},
+  publisher	= {Ashgate},
+  year		= {2005},
+  author	= {Norton Dudeque},
+  address	= {Aldershot},
+  keywords	= {music analysis}
 }
 
-@Book{            larue92:guidelines,
-  title         = {Guidelines for style analysis},
-  publisher     = {Harmonie Park Press},
-  year          = {1992},
-  author        = {LaRue, Jan},
-  address       = {Warren, Mich.}
+@Book{		  epstein79:beyond,
+  author	= {David Epstein},
+  title		= {Beyond Orpheus: studies in musical structure},
+  publisher	= {MIT Press},
+  year		= 1979,
+  address	= {Cambridge, Mass},
+  keywords	= {music analysis}
 }
 
-@Book{            lendvai71:bela,
-  title         = {Béla Bartók: An Analysis of His Music},
-  publisher     = {Kahn \& Averill},
-  year          = {1971},
-  author        = {Ernö Lendvai},
-  address       = {London}
+@Book{		  howat83:debussy,
+  title		= {Debussy in Proportion: A musical analysis},
+  publisher	= {Cambridge University Press},
+  year		= {1983},
+  author	= {Roy Howat},
+  address	= {Cambridge},
+  keywords	= {music analysis}
 }
 
-@MastersThesis{   moore06:missa,
-  author        = {Michael J. Moore},
-  title         = {Missa Papae Marcelli: A Comparative Analysis of the
-                  Kyrie and Gloria Movements of Giovanni Pierluigi da
-                  Palestrina and an Adaptation by Giovanni Francesco
-                  Anerio},
-  school        = {University of North Texas},
-  year          = 2006,
-  file          = {moore06:missa.pdf},
-  url           = {http://digital.library.unt.edu/permalink/meta-dc-5257:1}
+@Book{		  larue92:guidelines,
+  title		= {Guidelines for style analysis},
+  publisher	= {Harmonie Park Press},
+  year		= {1992},
+  author	= {LaRue, Jan},
+  address	= {Warren, Mich.},
+  keywords	= {music analysis}
+}
+
+@Book{		  lendvai71:bela,
+  title		= {Béla Bartók: An Analysis of His Music},
+  publisher	= {Kahn \& Averill},
+  year		= {1971},
+  author	= {Ernö Lendvai},
+  address	= {London},
+  keywords	= {music analysis}
+}
+
+@MastersThesis{	  moore06:missa,
+  author	= {Michael J. Moore},
+  title		= {Missa Papae Marcelli: A Comparative Analysis of the Kyrie
+		  and Gloria Movements of Giovanni Pierluigi da Palestrina
+		  and an Adaptation by Giovanni Francesco Anerio},
+  school	= {University of North Texas},
+  year		= 2006,
+  file		= {moore06:missa.pdf},
+  url		= {http://digital.library.unt.edu/permalink/meta-dc-5257:1},
+  keywords	= {music analysis}
 }
