--- a/music-scores.bib
+++ b/music-scores.bib
@@ -1,49 +1,53 @@
 
-@Book{            bach41:371,
-  editor        = {Albert Riemenschneider},
-  title         = {371 Harmonized Chorales and 69 Chorale Melodies with
-                  figured bass},
-  publisher     = {G. Schirmer},
-  year          = {1941},
-  address       = {New York}
+@Book{		  bach41:371,
+  editor	= {Albert Riemenschneider},
+  title		= {371 Harmonized Chorales and 69 Chorale Melodies with
+		  figured bass},
+  publisher	= {G. Schirmer},
+  year		= {1941},
+  address	= {New York},
+  keywords	= {music scores}
 }
 
-@Book{            bartok.ea97:concerto,
-  title         = {Concerto for orchestra = Concerto pour orchestre = Konzert
-                  für Orchester},
-  publisher     = {Boosey \& Hawkes},
-  year          = {1997},
-  author        = {Bartók, Béla and MacDonald, Malcolm},
-  pages         = {1 score (viii, 150 )},
-  address       = {London ; New York},
-  annote        = {Béla Bartók.
-                  
-                  Concerto pour orchestre
-                  
-                  Konzert für Orchester
-                  
-                  Full orchestral score.
-                  
-                  port. ; 31 cm.
-                  
-                  Duration: 38:00.
-                  
-                  Introduzione -- Giuoco delle coppie -- Elegia -- Intermezzo
-                  interrotto -- Finale.}
+@Book{		  bartok.ea97:concerto,
+  title		= {Concerto for orchestra = Concerto pour orchestre = Konzert
+		  für Orchester},
+  publisher	= {Boosey \& Hawkes},
+  year		= {1997},
+  author	= {Bartók, Béla and MacDonald, Malcolm},
+  pages		= {1 score (viii, 150 )},
+  address	= {London ; New York},
+  annote	= {Béla Bartók.
+		  
+		  Concerto pour orchestre
+		  
+		  Konzert für Orchester
+		  
+		  Full orchestral score.
+		  
+		  port. ; 31 cm.
+		  
+		  Duration: 38:00.
+		  
+		  Introduzione -- Giuoco delle coppie -- Elegia -- Intermezzo
+		  interrotto -- Finale.},
+  keywords	= {music scores}
 }
 
-@Book{            beethoven70:complete,
-  title         = {Complete String Quartets},
-  publisher     = {Dover Publications, Inc},
-  year          = {1970},
-  author        = {{Ludwig van} Beethoven}
+@Book{		  beethoven70:complete,
+  title		= {Complete String Quartets},
+  publisher	= {Dover Publications, Inc},
+  year		= {1970},
+  author	= {{Ludwig van} Beethoven},
+  keywords	= {music scores}
 }
 
-@Book{            webern92:funf,
-  author        = {Anton Webern},
-  title         = {Fünf Sätze für Streichquartett},
-  publisher     = {Philharmonia Partituren in der Universal Edition},
-  year          = 1992,
-  number        = 358,
-  address       = {Wien}
+@Book{		  webern92:funf,
+  author	= {Anton Webern},
+  title		= {Fünf Sätze für Streichquartett},
+  publisher	= {Philharmonia Partituren in der Universal Edition},
+  year		= 1992,
+  number	= 358,
+  address	= {Wien},
+  keywords	= {music scores}
 }
